--- a/MyDocs/edu/数学_数形-总结/0数-1-算数.md
+++ b/MyDocs/edu/数学_数形-总结/0数-1-算数.md
@@ -191,10 +191,12 @@
 
           求一个数的平方根的运算叫做**开平方**，是平方运算的逆运算。  
 
+          $\sqrt{S} 也可以表示为S^{\frac{1}{2}}$（必修1）
+
           > 常见开根近似值：$\sqrt{2} \approx 1.414 ; \sqrt{3} \approx 1.732 ; \sqrt{5} \approx 2.236 ; \sqrt{6} \approx 2.449$
 
       - 一个数的立方等于a，这个数就叫做a 的**立方根**，也叫做a 的三次方根。记作$\sqrt[3]{a}$ 。其中a 是被开方数，3是**根指数**，符号$\sqrt[3]{}$ 读作“三次根号”。求一个数的立方根的运算，叫做**开立方**
-
+      
           一个正数有一个正的立方根；一个负数有一个负的立方根；0的立方根是0。（事实）
 
 #### 混合运算
