--- a/MyDocs/edu/数学_数形-总结/1图形-0-事实定理.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-事实定理.md
@@ -26,4 +26,4 @@
 
 
 
-数学中的每一条判定定理都给出了相应数学结论成立的一个充分条件；数学中的每一条性质定理都给出了相应数学结论成立的一个必要条件。（10年级上）
+数学中的每一条判定定理都给出了相应数学结论成立的一个充分条件；数学中的每一条性质定理都给出了相应数学结论成立的一个必要条件。（必修1）
