--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础.md
@@ -180,7 +180,7 @@
 
 
 
-对于一种几何图形或几何图形之间的关系，可以通过充要条件给出它的等价定义，通过充分条件给出它的判定定理，通过必要条件给出它的性质定理。（10年级上）
+对于一种几何图形或几何图形之间的关系，可以通过充要条件给出它的等价定义，通过充分条件给出它的判定定理，通过必要条件给出它的性质定理。（必修1）
 
 #### 弓形
 
