--- a/MyDocs/edu/数学_数形-总结/2-数形.md
+++ b/MyDocs/edu/数学_数形-总结/2-数形.md
@@ -1,20 +1,24 @@
 ## 数形
 
-### 数轴(7年级上)
+### 数轴
 
-画一条直线（一般画成水平的），在直线上任取一点O 作为**原点**，表示数0；规定直线的一个方向（一般取从左到右的方向）为**正方向**，用箭头表示，相反的方向为负方向；再取适当的长度为**单位长度**。像这样规定了原点、单位长度、正方向的直线叫做**数轴**。
+画一条直线（一般画成水平的），在直线上任取一点O 作为**原点**，表示数0；规定直线的一个方向（一般取从左到右的方向）为**正方向**，用箭头表示，相反的方向为负方向；再取适当的长度为**单位长度**。像这样规定了原点、单位长度、正方向的直线叫做**数轴**。(7年级上)
 
 
 
-在数轴上表示两个数，右边的数总比左边的数大，正数都大于0，负数都小于0，正数大于负数。
+在数轴上表示两个数，右边的数总比左边的数大，正数都大于0，负数都小于0，正数大于负数。(7年级上)
 
-实数范围内，每一个实数都可以用数轴上的点来表示；反过来，数轴上的每一个点都表示一个实数。即实数和数轴上的点一一对应。
+实数范围内，每一个实数都可以用数轴上的点来表示；反过来，数轴上的每一个点都表示一个实数。即实数和数轴上的点一一对应。(7年级上)
 
 > 实际用数轴上的点表示实数的时候，会取近似值
 
-在数轴上，表示互为相反数（0除外）的两个点，位于原点的两侧，并且到原点的距离相等。
+在数轴上，表示互为相反数（0除外）的两个点，位于原点的两侧，并且到原点的距离相等。(7年级上)
 
+在数轴上表示范围，空心点表示不包括，实心点表示包括。（8年级上）
 
+**基本事实**：如果a-b 是正数，那么a>b；如果a-b 等于0，那么a=b；如果a-b是负数，那么a<b。反过来也对（必修1）
+
+> $a>b\Leftrightarrow a-b>0; a=b\Leftrightarrow a-b=0;a<b\Leftrightarrow a-b<0$  
 
 ### 平面直角坐标系（8年级上）
 
@@ -55,17 +59,53 @@ x轴和y轴上的点不属于任何象限
 
 一般的，在某个变化过程中，设有两个变量x,y，如果对于x 的每一个确定的值，y 都有唯一确定的值与之对应，那么就说y 是x 的函数，x 叫做**自变量**。如$m=16t$ 中，m 是t 的函数，t 是自变量。自变量取一个具体数值时获得的结果，叫做**函数值**。如$m=80$ 是自变量 $t=5$ 时的函数值。（8年级上）
 
-在自变量的取值范围内，函数值满足$y\le M(或y\ge M)$，且等号能成立，我们就说函数有**最大值**M（或**最小值**M）(9年级上)
+> 这里的唯一，是指“数量”唯一（一个结果对应），不是指“值”唯一（整体可重复）（个人）
+
+#### 表示方法
+
+- 这种表示函数关系的等式，叫做**函数表达式**，简称**函数式**，用函数表达式表示函数的方法也叫**解析法**（8年级上）
+
+    函数的解析式是舍弃问题的实际背景而抽象出来的，它所反映的两个量之间的对应关系，可以广泛的用于刻画一类事物中的变量关系和规律（必修1）
+
+    **分段函数**：如：$y= 
+    \begin{cases}
+    x& \text{(x} \geq \text{0)}
+    \\ -x& \text{(x} < \text{0)}
+    \end{cases}$
+
+- 有时把自变量x 的一系列值和函数y 的对应值列成一个表，这种表示函数关系的方法是**列表法**（8年级上）
+
+- 还可以用**图像法**：（8年级上）
+
+    函数图像既可以是连续的曲线，也可以是直线、折线、离散的点。（必修1）
+
+- 使用**符号**$f$ 表示对应关系：设A,B 是非空的实数集，如果对于集合A 中的任意一个数x，按照某种确定的对应关系$f$，在结合B 中都有唯一确定的数y 和它对应，那么就称$f:A\rightarrow B$ 为从集合A 到集合B 的一个函数。记作$y=f(x),x\in A$。其中x叫做自变量，x 的取值范围A 叫做函数的**定义域**，与x 的值相对应的y 值叫做函数值，函数值的集合$\{f(x)|x\in A\}$ 叫做函数的**值域**（必修1）
+
+    > 如果两个函数的定义域相同，并且对应关系完全一致，即相同的自变量对应的函数值也相同，那么这两个函数是同一个函数（即使抽象时的字母不同）；两个函数如果仅有对应关系相同，但定义域不相同，那么它们不是同一个函数（必修1）
+    
+    结合解析法，可以表示为这种形式：$f(x)=x$（必修1）
 
 
 
-#### 表示方法（8年级上）
+#### 基本性质
 
-且例子中函数是等式，这种表示函数关系的等式，叫做**函数表达式**，简称**函数式**，用函数表达式表示函数的方法也叫**解析法**
+- 最值：在自变量的取值范围内，函数值满足$y\le M(或y\ge M)$，且等号能成立，我们就说函数有**最大值**M（或**最小值**M）(9年级上)
 
-有时把自变量x 的一系列值和函数y 的对应值列成一个表，这种表示函数关系的方法是**列表法**
+- **单调性**：函数值随自变量的增大而增大（或减少）的性质（必修1）
 
-还可以用**图像法**：求值时根据自变量的值，绘制一条直线，得到交叉点的函数值即可
+    设函数f(x) 的定义域为I，区间$D\sube$ I。如果$\forall x_1,x_2\in D，当x_1<x_2时，都有f(x_1)<f(x_2)$，那么就称函数f(x) 在区间D 上**单调递增**，特别的，当函数f(x) 在它的定义域上单调递增时，就称它是**增函数**。如果...都有$f(x_1)>f(x_2)$，那...上**单调递减**，特别的...是**减函数**（必修1）
+
+    如果函数y=f(x) 在区间D 上单调递增或单调递减，那么就说函数y=f(x) 在这一区间具有（严格的）单调性，区间D 叫做y=f(x) 的**单调区间**（必修1）
+
+- **奇偶性**：（必修1）
+
+    > 判断函数的奇偶性应先明确它的定义域
+
+    设函数$f(x)$ 的定义域为$I，如果\forall x\in I$，都有$-x\in I，且f(-x)=f(x)$，那么函数$f(x)$ 就叫做**偶函数**。-- 关于y 轴对称
+
+    设函数$f(x)$ 的定义域为$I，如果\forall x\in I$，都有$-x\in I，且f(-x)=-f(x)$，那么函数$f(x)$ 就叫做**奇函数**。-- 关于原点中心对称
+    
+    > 拓展：函数$y=f(x)$ 的图像关于点P (a,b) 成中心对称图形的充要条件是函数$y=f(x+a)-b$ 为奇函数
 
 #### 一次函数（8年级上）
 
@@ -89,9 +129,17 @@ x轴和y轴上的点不属于任何象限
 
 
 
-#### 二次函数（9年级上）
+#### 二次函数
 
-把形如$y=ax^2+bx+c(其中a,b,c是常数,a\ne 0)$ 的函数叫做**二次函数**，称a 为二次项系数，b 为一次项系数，c 为常数项。
+把形如$y=ax^2+bx+c(其中a,b,c是常数,a\ne 0)$ 的函数叫做**二次函数**，称a 为二次项系数，b 为一次项系数，c 为常数项。（9年级上）
+
+把使$ax^2+bx+c=0$ 的实数x 叫做该二次函数的**零点**（必修1）
+
+
+
+#### 幂函数（必修1）
+
+形如函数$y=x^\alpha$ （具有幂的形式，都是以幂的底数为自变量，幂的指数都是常数）叫做**幂函数**，其中x 是自变量，$\alpha$ 是常数。（只研究$\alpha \in {1,2,3,\frac{1}{2},-1}$）
 
 
 
@@ -119,11 +167,17 @@ x轴和y轴上的点不属于任何象限
 
 #### 二次函数（9年级上）
 
-二次函数$y=a(x-m)^2+k(a\ne 0)$的图像是一条**抛物线**，对称轴是直线`x=m` ，**顶点**是(m, k)。当$a>0$ 时，抛物线的开口向上，顶点是抛物线的最低点；当$a<0$ 时，抛物线的开口向下，顶点是抛物线的最高点。
+二次函数$y=a(x-m)^2+k(a\ne 0)$的图像是一条**抛物线**，对称轴是直线`x=m` ，**顶点**是(m, k)
 
 而二次函数$y=ax^2+bx+c(a\ne 0)$ 可以通过变形得到$y=a(x+\frac{b}{2a})^2+\frac{4ac-b^2}{4a}(a\ne 0)$ 。所以其图像是一条抛物线，对称轴是直线$x=-\frac{b}{2a}$ ，顶点是$(-\frac{b}{2a}, \frac{4ac-b^2}{4a})$. 当$a>0$ ... ; 当$a<0$ ...
 
-**性质**：图像与x 轴的交点数量，增减性，最大最小值
 
->  就可以利用此来计算日常应用的最值问题 
+
+**性质**：
+
+- 当$a>0$ 时，抛物线的开口向上，顶点是抛物线的最低点；当$a<0$ 时，抛物线的开口向下，顶点是抛物线的最高点。
+
+- 图像与x 轴的交点数量，增减性，最大最小值
+
+    >  就可以利用此来计算日常应用的最值问题 
 
