--- a/MyDocs/edu/数学_数形-总结/2逻辑-1-集合.md
+++ b/MyDocs/edu/数学_数形-总结/2逻辑-1-集合.md
@@ -1,4 +1,4 @@
-## 集合/集Set：(10年级上)
+## 集合/集Set：(必修1)
 
 小学初中接触过的集合：自然数的集合；同一平面内到一个定点的距离等于定长的点的集合（即圆）
 
@@ -87,6 +87,8 @@
 对于一个集合A， 由全集U 中不属于集合A 的所有元素组成的集合称为集合A 相对于全集U 的**补集**，简称为集合A 的补记，记作 $\complement_U A$。即$\complement_U A=\{x|x\in U,且x\notin A\}$ 
 
 #### 拓展
+
+集合A 的子集共有多少个：$2^{card(A)}$；如果有一个元素$a \in A$ ，那么a 在A 的子集中，一共出现多少次：$2^{card(A)-1}$
 
 $card(A \cup B) = card(A) + card(B) -card(A\cap B)$
 
