--- a/MyDocs/edu/数学_数形-总结/0数-2-代数.md
+++ b/MyDocs/edu/数学_数形-总结/0数-2-代数.md
@@ -130,12 +130,20 @@ $$
 
 
 
+
+
+类似的反应数量关系的问题，就是相等与不等。**相等用等式表示，不等用不等式表示**（必修1）
+
+等号没有方向性，而不等号具有方向性（必修1）
+
 ### 等式
 
-##### 基本性质：（7年级上）
+##### 基本性质：
 
-1. 等式的两边都加上（或都减去）同一个数或式，所得结果仍是等式。$若a=b，则a\pm{c}=b\pm{c}$
-2. 等式的两边都乘或都除以同一个数或式，（除数不能为0,），所得结果仍是等式。$若a=b，则ac=bc,或\frac{a}{c}=\frac{b}{c}(c\ne0)$
+1. 等式的两边都加上（或都减去）同一个数或式，所得结果仍是等式。$若a=b，则a\pm{c}=b\pm{c}$（7年级上）
+2. 等式的两边都乘或都除以同一个数或式，（除数不能为0），所得结果仍是等式。$若a=b，则ac=bc,或\frac{a}{c}=\frac{b}{c}(c\ne0)$（7年级上）
+3. 如果$a=b$ 那么$b=a$ (必修1)
+4. 如果$a=b,b=c$，那么$a=c$ (必修1)
 
 
 
@@ -222,7 +230,9 @@ $$
         $b^2-4ac<0 \Lrarr 方程ax^2+bx+c=0,(a\ne 0) 没有实数根$
         
         > 两个相等实数根的理解：https://www.zhihu.com/question/370051033/answer/1058220808
-
+        
+        用符号$\Delta=b^2-4ac$ 表示（必修1）
+    
     【选修】
     
     - **根与系数的关系**（韦达定理）：如果$x_1,x_2$ 是一元二次方程$ax^2+bx+c=0$ 的两个根，那么$x_1+x_2=-\frac{b}{a};x_1\times x_2=\frac{c}{a}$
@@ -243,23 +253,25 @@ $$
 
 ### 不等式
 
-（8年级上）
-
-像$v\le40,t\ge6000,3x>5,q<p+2,x\ne3$，用符号"$<,\le,>,\ge,\ne$" 连接而成的数学式子，叫做**不等式**，这用用来连接的符号统称**不等号**
+像$v\le40,t\ge6000,3x>5,q<p+2,x\ne3$，用符号"$<,\le,>,\ge,\ne$" 连接而成的数学式子，叫做**不等式**，这用用来连接的符号统称**不等号**（8年级上）
 
 > 那么 3 > 2  是不等式么？
 
-在数轴上表示，空心点表示不包括，实心点表示包括。
+##### 区间（必修1）
+
+设a,b 是两个实数，而且a<b，我们规定：满足不等式$a\le x\le b$ 的实数x 的集合叫做**闭区间**，表示为$[a, b]$；满足不等式$a<x<b$ 的实数x 的集合叫做**开区间**，表示为$(a,b)$；满足不等式$a\le x<b 或a<x\le b$ 的实数x 的集合叫做**半开半闭区间**，分别表示为$[a,b),(a,b]$。这里的实数a 与b 都叫做相应区间的**端点**。
+
+实数集R 可以用区间表示为$(-\infin,+\infin)$，$\infin$ 读作“无穷大”；只有一端的实数x 的集合，可以结合无穷表示，如 $x\ge a$，可以用区间表示为：$[a, +\infin)$
 
 
 
-（8年级上）
+##### 基本性质：
 
-基本性质：
+1. $a>b\Leftrightarrow b<a$（必修1）
 
-1. **传递性**：$a<b, b<c\Rightarrow a<c$
+1. **传递性**：$a<b, b<c\Rightarrow a<c$（8年级上）
 
-2. 不等式的两边都加上（或减去）同一个数，所得到的的不等式仍成立：
+2. 不等式的两边都加上（或减去）同一个数，所得到的的不等式仍成立：（8年级上）
 
     $a>b \Rightarrow a+c >b+c, a-c>b-c$
 
@@ -267,11 +279,25 @@ $$
 
     > 可以使用移项法
 
-3. 不等式的两边都乘（或都除以）同一个正数，所得的不等式仍成立；不等式的两边都乘（或都除以）同一个负数，必须改变不等号的方向，所得的不等式成立。（字母公式略）
+4. 不等式的两边都乘（或都除以）同一个正数，所得的不等式仍成立；不等式的两边都乘（或都除以）同一个负数，必须改变不等号的方向，所得的不等式成立。（字母公式略，8年级上）
+
+推导性质：（必修1）
+
+1. 如果$a>b,c>d$，那么$a+c>b+d$
+2. 如果$a>b>0,c>d>0$，那么$ac>bd$
+3. 如果$a>b>0$，那么$a^n>b^n(a\in N,n\ge2)$ 
 
 
 
-（8年级上）
+完全平方公式可得：$\forall a,b\in R, a^2+b^2\ge2ab$ 当且仅当$a=b$ 时，等号成立。（必修1）
+
+**基本不等式**：$\sqrt{ab}\le \frac{a+b}{2}$ ，其中$\frac{a+b}{2}$ 叫做正数a,b 的**算术平均数**，$\sqrt{ab}$ 叫做正数a,b 的**几何平均数**（必修1）
+
+如果a,b,m 都是正实数，且$a<b$，那么$\frac{a}{b}<\frac{a+m}{b+m}$（必修1 练习）
+
+
+
+#### 一元一次不等式（8年级上）
 
 不等号的两边都是整式，而且只含有一个未知数，未知数的最高次数是一次，这样的不等式叫做**一元一次不等式**
 
@@ -280,6 +306,12 @@ $$
 一般的，由几个含同一未知数的一元一次不等式所组成的一组不等式，叫做**一元一次不等式组**
 
 组成不等式组的各个不等式的解的公共部分就是**不等式组的解**；当它们没有公共部分时，称这个不等式组**无解**
+
+#### 一元二次不等式（必修1）
+
+把只含有一个未知数，并且未知数的最高次数是2 的不等式，称为**一元二次不等式**
+
+> 一般形式为：$ax^2+bx+c>0 或ax^2+bx+c<0$，其中a,b,c 均为常数，$a\ne 0$
 
 
 
