--- a/MyDocs/edu/数学_数形-总结/2逻辑-0-基础.md
+++ b/MyDocs/edu/数学_数形-总结/2逻辑-0-基础.md
@@ -4,7 +4,7 @@
 
 能清楚地规定某一名称或术语的意义的句子叫做该名称或术语的**定义**
 
-用语言、符号或式子表达的，可以判断真假的陈述句叫做**命题**（10年级上）
+用语言、符号或式子表达的，可以判断真假的陈述句叫做**命题**（必修1）
 
 数学上学习的命题一般由条件和结论两部分组成，条件是已知事项，结论是由已知事项得到的事项。这样的命题可以写成“如果……那么……”的形式，其中以“如果”开始的部分是**条件**，“那么”后面的部分是**结论**
 
@@ -16,7 +16,7 @@
 
 在两个命题中，如果第一个命题的条件是第二个命题的结论，而第一个命题的结论是第二个命题的条件，那么这两个命题叫做**互逆命题**，如果把其中一个命题叫做**原命题**，那么另一个命题叫做它的**逆命题**。
 
-许多命题可以写成：若p，则q ； 如果p，那么q 的形式。其中p 称为命题的**条件**，q 称为命题的**结论**。当这种形式的命题为真时，是指由p 通过推理可以得出q， 即由p 可以推出q，记作 $p \Rightarrow q$。（10年级上）
+许多命题可以写成：若p，则q ； 如果p，那么q 的形式。其中p 称为命题的**条件**，q 称为命题的**结论**。当这种形式的命题为真时，是指由p 通过推理可以得出q， 即由p 可以推出q，记作 $p \Rightarrow q$。（必修1）
 
 - 每个命题都有它的逆命题，但每个真命题的逆命题不一定是真命题（8年级上）
 - 如果命题和它的逆命题都是真命题，即既有$p\Rightarrow q, 又有q\Rightarrow p, 记作p\Leftrightarrow q $
@@ -25,7 +25,7 @@
 
 **反证法**：在证明一个命题时，人们有时先假设命题不成立，从这样的假设出发，经过推理得出和已知条件矛盾，或者与定义、基本事实、定理等矛盾，从而得出假设命题不成立是错误的，即所求证的命题正确。（8年级下）
 
-#### 充分必要（10年级上）
+#### 充分必要（必修1）
 
 真命题中，p 是q 的**充分条件**，q 是p 的**必要条件**
 
@@ -37,7 +37,7 @@
 
 对于互逆命题都为真的，p 既是q 的充分条件，也是q 的必要条件。则说p 是q 的**充分必要条件**，简称为充要条件。显然此时q 也是p 的充要条件，即p 与q 互为充要条件
 
-#### 量词（10年级上）
+#### 量词（必修1）
 
 有一些含有变量的陈述句，无法判断真假。如果在原语句的基础上，用一个短语对变量的取值范围进行限定，就可以使它们成为一个命题。把这样的短语称为**量词**
 
@@ -47,7 +47,7 @@
 
 > 这种描述和前面的 竖杠 又不太对的上
 
-#### 否定命题（10年级上）
+#### 否定命题（必修1）
 
 对一个命题进行否定，就可以得到一个新的命题，这个新命题称为原命题的否定
 
