必修一，课本完结
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
@@ -78,9 +78,15 @@
 
 角也可以看成是由一条射线绕着它的端点旋转而成的图形，起始位置的射线叫做**角的始边**，终止位置的射线叫做**角的终边**（7年级上）
 
+一条射线绕其端点按逆时针方向旋转形成的角叫做**正角**；按顺时针方向旋转形成的角叫做**负角**。如果一条射线没有做任何旋转，就称它形成了一个**零角**。**任意角** 即包括正角、负角和零角（必修1）
+
+把射线OA 绕端点O 按不同方向旋转相同的量所成的两个角叫做互为**相反角**，角$\alpha$ 的相反角记为$-\alpha$（必修1）
+
 旋转过程中，终边和始边形成一条直线时，所成的角叫做**平角**；终边和始边再次重合时，所成的角叫做**周角**。（7年级上）
 
 
+
+**角度制：**（必修1）
 
 把圆平均分成360 份，将其中1份所对的角作为度量角的单位，它的大小就是**1度**，记作$1^\circ$  (4年级上)
 
@@ -98,13 +104,29 @@
 - 用一个数字或希腊字母（$\alpha$ - alpha，$\beta$ - beta，$\gamma$ - gamma）表示。如$\angle1 , \angle α$
 - 在不引起混淆的情况下，也可以用角的顶点字母来表示这个角。如$\angle O$
 
+> 为了简单起见，在不引起混淆的前提下，角$\alpha$ 或者$\angle \alpha$ 可以简记称 $\alpha$ （必修1）  
 
+**弧度制**：（必修1）
+
+长度等于半径长的圆弧所对的圆心角叫做**1弧度**的角。弧度单位用符号rad 表示，读作弧度。
+
+在半径为r 的圆中，弧长为$l$ 的弧所对的圆心角为$\alpha$ rad，那么$|\alpha|=\frac{l}{r}$ 。正角的弧度数是一个正数，负角的弧度数是一个负数，零角度弧度数是0。 
+
+
+
+零角 = $0^\circ$（必修1）
 
 1**直角**=$90^\circ$ ; 1**平角**=$180^\circ$；1**周角**=$360^\circ$  （4年级上）
 
 等于90度的角是**直角**，小于直角的角是**锐角**，大于直角而小于平角的角是**钝角**（7年级上）
 
 直角可以表示为：$Rt\angle$（8年级上）
+
+
+
+**弧度和角度的转换**：$180^\circ=\pi $ rad （必修1）
+
+弧度制表示角的时候，“弧度”二字或者“rad” 通常略去不写，而只写该角所对应的弧度数。（必修1）
 
 
 
@@ -118,11 +140,17 @@
 
 > 坡面的倾斜角叫作坡角
 
-**运算**（7年级上）
+**运算**
 
-- 如果两个角的度数相等，我们就说这两个角相等，记作$\angle B = \angle C$（大小类似，转换为角度比较）
+- 如果两个角的度数相等，我们就说这两个角相等，记作$\angle B = \angle C$（大小类似，转换为角度比较） （7年级上）
 
-    如果一个角的度数是另两个角的度数的和，那么这个角就叫做另**两个角的和**。（差类似）
+    如果一个角的度数是另两个角的度数的和，那么这个角就叫做另**两个角的和**。（差类似）（7年级上）
+    
+- 如果两个角$\alpha,\beta$由射线绕端点旋转而成，且旋转方向相同、旋转量相等，就称$\alpha = \beta$ （必修1）
+
+    设$\alpha,\beta$ 是任意两个角，规定把角$\alpha$ 的终边旋转角$\beta$ ，这时终边所对应的角是$\alpha+\beta$ （必修1）
+
+    > 基于相反角，角的减法可以转化为角的加法
 
 **性质**：
 
@@ -137,7 +165,7 @@
 
 ##### 定义（7年级下）
 
-![image-20230911153051387](image-20230911153051387.png)
+<img src="image-20230911153051387.png" alt="image-20231107102715692" style="zoom:50%;" />
 
 直线$l1, l2$ 被第三条直线$l3$ 所截，构成了8个角。位置关系的种类有：
 
@@ -243,6 +271,8 @@
     由一个图形改变为另一个图形，在改变的过程中保持形状不变（大小可以改变），这样的图形改变叫做图形的**相似**（9年级上）
 
     **放大缩小**（6年级下）是图形相似的应用（9年级上）
+
+    - 相似三角形的定义从两个三角形各要素间的相互关系（边、角）给出了两个三角形相似的充要条件（必修1）
 
 - **中心对称图形**（8年级下）
 
