--- a/MyDocs/edu/数学_数形-总结/1图形-1-平面-1-三角形.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-1-平面-1-三角形.md
@@ -24,6 +24,8 @@
         - 有一个内角是直角的三角形是**直角三角形**（4年级下），直角三角形可以用符号$Rt\triangle$ 表示（8年级下）
         - 有一个内角是钝角的三角形是**钝角三角形**（4年级下）
     
+    - **斜三角形**（必修1）：一个不包含直角的三角形（个人）
+    
     - 等腰三角形
     
         - 有两边相等的三角形叫做**等腰三角形**（4年级下）
@@ -122,32 +124,4 @@
 - 有两个角对应相等的两个三角形相似（判定）
 - 两边对应成比例，且夹角相等的两个三角形相似（判定）
 - 三边对应成比例的两个三角形相似（判定）
-
-### 三角函数（9年级下）
-
-对于每一个确定的锐角$\alpha$ （$\angle A$） ，在角的一边任取一点B，作另一边点垂线，交于点C，即$BC\perp AC$ ，比值$\frac{BC}{AB},\frac{AC}{AB},\frac{BC}{AC}$ 都是一个确定的值a，与点B 在角的边上的位置无瓜，但随锐角$\alpha $ 的变化而变化。我们把比值a 看作是关于锐角$\alpha$ 的函数，叫作$\angle \alpha$ 的**正弦**，记作$sin \alpha$，即$sin\alpha=\frac{BC}{AB}$。
-
-同样的，比值$\frac{AC}{AB}$ 叫作$\angle \alpha$ 的**余弦**，记作$cos\alpha$，即$cos\alpha=\frac{AC}{AB}$；  比值$\frac{BC}{AC}$ 叫作$\angle \alpha$ 的**正切**，记作$tan\alpha$，即$tan\alpha=\frac{BC}{AC}$；  
-
-锐角$\alpha$ 的正弦、余弦、正切统称为$\angle \alpha$ 的**三角函数**。
-
-常见三角函数的举例：$sin30^\circ$ 的值为$\frac{1}{2}$; $sin60^\circ$ 的值为$\frac{\sqrt{3}}{2}$; $tan45^\circ$ 的值为1（个人）
-
-> $sin^245^\circ$ 的写法表示$(sin45^\circ)^2$ 
-
-转换为直角三角形的模式：$\angle A$ 是$Rt\angle ABC$ 的一个锐角，$\angle A$ 和直角公用的边称为$\angle A$ 的邻边，则有
-
-$sinA =\frac{\angle A的对边}{斜边}; cosA=\frac{\angle A的邻边}{斜边}; tanA=\frac{\angle A的对边}{\angle A的邻边}$ 
-
-> 当角用三个字母或者数字表示时，在三角函数式中需写上角的符号，如$sin\angle ABC; sin\angle 1$
-
-**性质**：
-
-锐角三角函数的值都是正实数，并且$0<sin\alpha<1; 0<cos\alpha<1$  
-
-- $\frac{sin\alpha}{cos\alpha} = tan\alpha; sin^2\alpha + cos^2\alpha=1$
-
-
-
-**解直角三角形**：在直角三角形中，由已知的一些边、角、求出另一些边、角的过程，叫作解直角三角形。
 
