--- a/MyDocs/edu/数学_数形-总结/0数-1-算数-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/0数-1-算数-0-概念.md
@@ -14,17 +14,19 @@
 
 ### 类型：
 
-![image-20230910211216483](image-20230910211216483.png)
+$$
+实数 
+\begin{cases}
+有理数 \begin{cases} 整数\\分数 \end{cases}
+\\ 无理数
+\end{cases}
+$$
 
-无限不循环小数叫做**无理数**。（7年级上）
+- **有理数**为有限小数和无限循环小数；**无理数**为无限不循环小数（7年级上）
 
-有理数和无理数统称**实数**。（7年级上）
+  > 无理数 e = 2.71828 （必修1）
 
-
-
-- **自然数**：表示物体个数的都是自然数，一个都没有，用0 表示。（4年级上）
-
-  - 最小的自然数是0，没有最大的自然数，自然数的个数是无限的（4年级上）
+- 有理数和无理数统称**实数**。（7年级上）
 
 - **分数**：
 
@@ -39,6 +41,10 @@
     分子大于或等于分母的分数叫作**假分数**，假分数大于或等于1
 
     由整数和真分数合成的数叫作**带分数**：如$2\frac{1}{2}$（5年级下）
+
+- **自然数**：表示物体个数的都是自然数，一个都没有，用0 表示。（4年级上）
+
+  - 最小的自然数是0，没有最大的自然数，自然数的个数是无限的（4年级上）
 
 - **小数**：整数部分、小数点、小数部分（4年级下）
 
@@ -107,6 +113,8 @@
 
   - 比较的时候，往往需要进行单位的换算，改成统一的单位（4年级下）
 
+    > 【拓展】比较的方式，简单的有直接相减与0 比，直接相除与1 比
+
 - 四则运算（4年级下）：
 
   - **加法**
@@ -161,43 +169,67 @@
     
         > 通常，我们把除法转化为乘法，使运算更简便
   
-- 乘方开方（7年级上）
+- 乘方开方
 
-  - 乘方
+  - 乘方（7年级上）
 
-      - 把n 个相同的因数a 相乘的积记作$a^n$，即 $\underbrace{a\times a\times...\times a}_{n个a} = a^n$。这种求几个相同因数的积的运算叫做**乘方**，乘方的结果叫做**幂**。其中a 叫做**底数**，n 叫做**指数**。读作“a 的n 次方” 或者“a 的n 次幂”
+      - 把n 个相同的因数a 相乘的积记作$a^n$，即 $\underbrace{a\times a\times...\times a}_{n个a} = a^n$。这种求几个相同因数的积的运算叫做**乘方**，乘方的结果叫做**幂**（但是用$a^n$ 这种形式描述）。其中a 叫做**底数**，n 叫做**指数**。读作“a 的n 次方” 或者“a 的n 次幂”
 
           > 幂的底数是分数或负数时，底数应该添上括号，如$(-5)^2$
           >
-          > （此时幂应该是理解为表达式，而不是结果）
-
+          
       - 一个数可以看做这个数本身的一次方，指数1 通常省略不写，二次方也叫做**平方**，三次方也叫做**立方**
-
+      
           > 常见平方、立方数（个人）：
           >
           > $7^3 = 343 ; 5^3 = 125 ; 4^3 = 64 ; 13^2 = 169 ； 14^2 = 196 ; 16^2 = 256$
           >
           > $1.1^2 = 1.21 ; 1.1^3 = 1.331$
-
-  - 开方
-
-      - 如果一个数的平方等于a，那么这个数叫做a 的**平方根**，也叫做a 的二次方根。其中a 叫做**被开方数**
-
-          一个正数有正、负两个平方根，它们互为相反数；0 的平方根是0；负数没有平方根。（事实）
-
-          正平方根用$\sqrt{a}$ 表示（读作“根号a”）；负平方根用$-\sqrt{a}$ 表示（读作“负根号a”）；合并用$\pm\sqrt{a}$（读作“正、负根号a”）。
-
-          正数的正平方根（7年级上），和零的平方根（8年级下）称为**算数平方根**
-
-          求一个数的平方根的运算叫做**开平方**，是平方运算的逆运算。  
-
-          $\sqrt{S} 也可以表示为S^{\frac{1}{2}}$（必修1）
-
-          > 常见开根近似值：$\sqrt{2} \approx 1.414 ; \sqrt{3} \approx 1.732 ; \sqrt{5} \approx 2.236 ; \sqrt{6} \approx 2.449$
-
-      - 一个数的立方等于a，这个数就叫做a 的**立方根**，也叫做a 的三次方根。记作$\sqrt[3]{a}$ 。其中a 是被开方数，3是**根指数**，符号$\sqrt[3]{}$ 读作“三次根号”。求一个数的立方根的运算，叫做**开立方**
+          
+      - 分数指数（必修1）
       
+          $\sqrt{S} 也可以表示为S^{\frac{1}{2}}$，即以分数为指数
+          
+          n 为奇数时，$\sqrt[n]{a^n}=a$；n 为偶数时，$\sqrt[n]{a^n}=$｜a｜
+          
+          规定：
+          
+          - $a^\frac{m}{n}=\sqrt[n]{a^m}(a>0,m,n\in N^*,n>1)$
+          - $a^{-\frac{m}{n}}=\frac{1}{a^{\frac{m}{n}}}=\frac{1}{\sqrt[n]{a^m}}(a>0,m,n\in N^*,n>1)$
+          
+          0 的正分数指数幂等于0，0 的负分数指数幂没有意义
+          
+      - 实数指数：无理数指数幂$a^\alpha(a>0,\alpha 为无理数)$ 是一个确定的实数。所以指数的范围也拓展到了实数（必修1）
+      
+      - 对数（必修1）
+      
+          如果$a^x=N(a>0,且a\ne 1)$，那么数x 叫作以a 为底N 的**对数**，记作$x=log_aN$。其中a 叫作对数的**底数**，N 叫作**真数**（和指数可以互推转换）
+      
+          将以10 为底的对数叫作**常用对数**，并把$log_{10}N$ 记为$lgN$；把以无理数e 为底的对数称为**自然对数**，并把$log_eN$ 记为$lnN$ 
+      
+          - 负数和0 没有对数
+      
+          - $log_a1=0; log_aa=1$
+      
+  - 开方（7年级上）
+  
+      - 如果一个数的平方等于a，那么这个数叫做a 的**平方根**，也叫做a 的二次方根。其中a 叫做**被开方数**
+  
+          一个正数有正、负两个平方根，它们互为相反数；0 的平方根是0；负数没有平方根。（事实）
+  
+          正平方根用$\sqrt{a}$ 表示（读作“根号a”）；负平方根用$-\sqrt{a}$ 表示（读作“负根号a”）；合并用$\pm\sqrt{a}$（读作“正、负根号a”）。
+  
+          正数的正平方根（7年级上），和零的平方根（8年级下）称为**算数平方根**
+  
+          求一个数的平方根的运算叫做**开平方**，是平方运算的逆运算。  
+  
+          > 常见开根近似值：$\sqrt{2} \approx 1.414 ; \sqrt{3} \approx 1.732 ; \sqrt{5} \approx 2.236 ; \sqrt{6} \approx 2.449$
+  
+      - 一个数的立方等于a，这个数就叫做a 的**立方根**，也叫做a 的三次方根。记作$\sqrt[3]{a}$ 。其中a 是被开方数，3是**根指数**，符号$\sqrt[3]{}$ 读作“三次根号”。求一个数的立方根的运算，叫做**开立方**
+  
           一个正数有一个正的立方根；一个负数有一个负的立方根；0的立方根是0。（事实）
+          
+      - 如果$x^n=a$，那么x 叫作a 的**n次方根**，其中$n>1，且n\in N^*$。当n 是奇数时，数的n 次方根和该数同号，用$\sqrt[n]{a}$ 表示；当n 是偶数时，正数的n 次方根有两个，用$\pm \sqrt[n]{a}$ 表示，负数没有偶次方根。（必修1）
 
 #### 混合运算
 
@@ -214,16 +246,24 @@
 - 幂相关的运算（法则，7年级下）
 
     - 同底数幂相乘（$a^m·a^n=a^{m+n}$，m,n 都是正整数），底数不变，指数相加
-
-    - 幂的乘方，底数不变，指数相乘（$(a^m)^n=a^{mn}$，m,n都是正整数）
-
+- 幂的乘方，底数不变，指数相乘（$(a^m)^n=a^{mn}$，m,n都是正整数）
     - 积的乘方，等于把积的每一个因式分别乘方，再把所得的幂相乘（$(ab)^n=a^ab^n$，n为正整数）  
+- 同底数幂相除（$a^m\div a^n=a^{m-n}$，$a\ne0,m,n都是正整数且m>n$），底数不变，指数相减
+  
+    - 任何不等于零的数的零次幂都等于1，$a^0=1, a\ne0$（规定）
+    - 任何不等于零的数的-p（p是正整数）次幂，等于这个数的p次幂的倒数，$a^{-p}=\frac{1}{a^p}，a\ne0，p 是正整数$（规定）
 
-    - 同底数幂相除（$a^m\div a^n=a^{m-n}$，$a\ne0,m,n都是正整数且m>n$），底数不变，指数相减
+- 对数相关的运算（必修1）
 
-        - 任何不等于零的数的零次幂都等于1，$a^0=1, a\ne0$（规定）
+    - $log_a{(MN)}=log_aM + log_aN$
 
-        - 任何不等于零的数的-p（p是正整数）次幂，等于这个数的p次幂的倒数，$a^{-p}=\frac{1}{a^p}，a\ne0，p 是正整数$（规定）
+    - $log_a{\frac{M}{N}}=log_aM-log_aN$
+
+    - $log_aM^n=nlog_aM(n\in R)$
+
+    - **对数换底公式**：
+
+      $log_ab=\frac{log_cb}{log_ca}(a>0，且a\ne 1;b>0;c>0，且c\ne 1)$
 
 ##### 括号
 
@@ -379,8 +419,6 @@
 - 最大、最小值（2年级下）
 
 - **倍**（3年级上）
-
-- **集合**：两项类型，单独参加，和两项都参加；学会范围画图（3年级上）
 
 - **比** 是数量之间的关系，两个数的比表示两个数相除。15比10记作15:10。
 
