--- a/MyDocs/edu/数学_数形-总结/2逻辑-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/2逻辑-0-基础-0-概念.md
@@ -12,18 +12,18 @@
 
 要判定一个命题是真命题，往往需要从命题的条件出发，根据已知的定义、基本事实、定理（包括推论），一步一步推得结论成立，这样的过程叫做**证明**
 
+- **反证法**：在证明一个命题时，人们有时先假设命题不成立，从这样的假设出发，经过推理得出和已知条件矛盾，或者与定义、基本事实、定理等矛盾，从而得出假设命题不成立是错误的，即所求证的命题正确。（8年级下）
+
+
+
+许多命题可以写成：若p，则q ； 如果p，那么q 的形式。其中p 称为命题的**条件**，q 称为命题的**结论**。当这种形式的命题为真时，是指由p 通过推理可以得出q， 即由p 可以推出q，记作 $p \Rightarrow q$。（必修1）
+
 
 
 在两个命题中，如果第一个命题的条件是第二个命题的结论，而第一个命题的结论是第二个命题的条件，那么这两个命题叫做**互逆命题**，如果把其中一个命题叫做**原命题**，那么另一个命题叫做它的**逆命题**。
 
-许多命题可以写成：若p，则q ； 如果p，那么q 的形式。其中p 称为命题的**条件**，q 称为命题的**结论**。当这种形式的命题为真时，是指由p 通过推理可以得出q， 即由p 可以推出q，记作 $p \Rightarrow q$。（必修1）
-
-- 每个命题都有它的逆命题，但每个真命题的逆命题不一定是真命题（8年级上）
-- 如果命题和它的逆命题都是真命题，即既有$p\Rightarrow q, 又有q\Rightarrow p, 记作p\Leftrightarrow q $
-
-
-
-**反证法**：在证明一个命题时，人们有时先假设命题不成立，从这样的假设出发，经过推理得出和已知条件矛盾，或者与定义、基本事实、定理等矛盾，从而得出假设命题不成立是错误的，即所求证的命题正确。（8年级下）
+- 每个命题都有它的逆命题，但每个真命题的逆命题不一定是真命题
+- 如果命题和它的逆命题都是真命题，即既有$p\Rightarrow q, 又有q\Rightarrow p, 记作p\Leftrightarrow q $（必修1）
 
 #### 充分必要（必修1）
 
@@ -37,6 +37,26 @@
 
 对于互逆命题都为真的，p 既是q 的充分条件，也是q 的必要条件。则说p 是q 的**充分必要条件**，简称为充要条件。显然此时q 也是p 的充要条件，即p 与q 互为充要条件
 
+#### 事实定义定理
+
+经过长期实践后公认为正确的命题，称为**基本事实**。`本总结简单标记为“事实”。`（8年级上）
+
+用推理的方法判断为正确的命题，叫做**定理**。（8年级上）
+
+> 书上对基本事实的几条描述，都在给出时标记了“基本事实”
+>
+> 而定理的描述，则比较随意，有些没有给出“定理”标记。
+
+如果一个定理的逆命题能被证明是真命题，那么就叫它是原定理的**逆定理**。这两个定理叫做**互逆定理**（8年级上）
+
+
+
+**定义** 即结论的充要条件，**判定定理** 即结论的充分条件，**性质定理** 即结论的必要条件。（必修1）
+
+>  数学中的每一条判定定理都给出了相应数学结论成立的一个充分条件；数学中的每一条性质定理都给出了相应数学结论成立的一个必要条件。（必修1）
+
+> 所以定理只分为判定和性质两种？（个人）
+
 #### 量词（必修1）
 
 有一些含有变量的陈述句，无法判断真假。如果在原语句的基础上，用一个短语对变量的取值范围进行限定，就可以使它们成为一个命题。把这样的短语称为**量词**
@@ -49,7 +69,7 @@
 
 #### 否定命题（必修1）
 
-对一个命题进行否定，就可以得到一个新的命题，这个新命题称为原命题的否定
+对一个命题进行否定，就可以得到一个新的命题，这个新命题称为**原命题的否定**
 
 用$\neg p(x)$ 表示$p(x)$不成立
 
