--- a/MyDocs/edu/数学_数形-总结/思维.md
+++ b/MyDocs/edu/数学_数形-总结/思维.md
@@ -117,3 +117,7 @@
 表格理顺序
 
 【七桥问题】一笔画
+
+### 必修一
+
+化归思想：如设$\alpha = \theta + \varphi; \beta = \theta - \varphi$ 那么$\theta = \frac{\alpha+\beta}{2};\varphi=\frac{\alpha-\beta}{2}$
