--- a/MyDocs/edu/数学_数形-总结/日常.md
+++ b/MyDocs/edu/数学_数形-总结/日常.md
@@ -2,6 +2,9 @@
 
 - **打几折**：表示十分之几，也就是百分之几十。（6年级上）
 - **成数**：即“几成”，表示一个数是另一个数的十分之几（6年级上）
+- **指数增长**：增长率为常数的变化方式（必修1）
+- **复利**：把前一期的利息和本金加在一起算作本金，再计算下一期的利息（必修1）
+- 直线上升、对数增长、指数爆炸（必修1）
 
 
 
