数学更新至8.6
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/1图形-1-平面-1-三角形.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-1-平面-1-三角形.md
@@ -18,6 +18,8 @@
 
         > 高线（8年级上）
     
+    - **垂心** 是三角形三条高所在直线的交点（必修2）
+    
     - **锐角三角形、直角三角形、钝角三角形**（4年级下）
     
         - 三个内角都是锐角的三角形是**锐角三角形**（4年级下）
@@ -124,4 +126,12 @@
 - 有两个角对应相等的两个三角形相似（判定）
 - 两边对应成比例，且夹角相等的两个三角形相似（判定）
 - 三边对应成比例的两个三角形相似（判定）
+
+
+
+### 解三角形（必修2）
+
+三角形的三个角A,B,C 和它们的对边a,b,c 叫做三角形的元素
+
+已知三角形的几个元素，求其他元素的过程叫做**解三角形**
 
