--- a/MyDocs/edu/数学_数形-总结/2数形-0-数轴-0.md
+++ b/MyDocs/edu/数学_数形-总结/2数形-0-数轴-0.md
@@ -23,6 +23,8 @@
 在平面内画两条互相垂直，并且有公共原点O 的数轴，其中一条叫做**$x轴$**（又叫**横轴**），通常画成水平；另一条叫做**$y轴$**（又叫**纵轴**），画成与$x轴$垂直。这样就建立了**平面直角坐标系**，简称直角坐标系。坐标系所在的平面就叫做**坐标平面**，两坐标轴的公共原点O 叫做直角坐标系的原点。
 
 > 也可以叫做直角坐标系$xOy$，x 轴叫做$Ox$ 轴... (必修1)
+>
+> 也有叫做$Oxy$ 的（必修2）
 
 对于平面内任意一点M，做$MM_1\bot x轴,MM_2\bot y轴$，设垂足$M_1,M_2$在各自数轴上所表示的数分别为x,y，则x 叫做点M 的**横坐标**，y叫做点M 的**纵坐标**，有序实数对(x,y) 叫做点M 的**坐标**
 
