--- a/MyDocs/edu/数学_数形-总结/2数形-2-三角函数-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/2数形-2-三角函数-1-课本练习.md
@@ -4,6 +4,8 @@ $sinx=x-\frac{x^3}{3!}+\frac{x^5}{5!}-\frac{x^7}{7!}+...$
 
 $cosx=1-\frac{x^2}{2!}+\frac{x^4}{4!}-\frac{x^6}{6!}+...$
 
+常见角度组合：$105=45+60;75=30+45$
+
 ### 基本
 
 - 求$\frac{5\pi}{3}、\frac{\pi}{2}$ 的正弦、余弦和正切值
