--- a/MyDocs/edu/数学_数形-总结/2逻辑-1-集合-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/2逻辑-1-集合-0-概念.md
@@ -29,6 +29,7 @@
 - 整数集：Z
 - 有理数集：Q
 - 实数集：R
+- 复数集：C （必修2）
 
 ##### 元素和集合的关系：
 
@@ -61,7 +62,13 @@
 
 - 对于两个集合A，B，如果集合A 中任意一个元素都是集合B 中的元素，就称集合A 为集合B 的**子集**，记作$A \subseteq B$（或$B\supseteq A$），读作A 包含于B（或B 包含A）
   - 如果集合$A\subseteq B$，但存在元素 $x\in B$，且$x\notin A$，就称集合A 是集合B 的**真子集**， 记作$A \subsetneqq B$（或$A\supsetneqq B$），读作A真包含于B（或B真包含A）
+  
+  > 也可以使用$A\subset B,A\not\subset B$（必修2）
+  >
+  > 但是$\subset$ 在是否真子集的表示上不那么明确，一般用在上下文容易理解的部分。理论上$\subseteq$ 和$\subsetneq$ 应该是一对，$\subseteqq$ 和$\subsetneqq$ 应该是一对，书上还拆开来各选一个，估计是考虑明确性和易书写性（个人）
+  
 - 如果集合A 的任何一个元素都是集合B 的元素，同时集合B 的任何一个元素都是集合A 的元素，那么集合A 与集合B **相等**，记作A = B（互为子集）
+
 - （规定：空集是任何集合的子集）
 
 推论：
