--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
@@ -68,6 +68,23 @@
 - **定义**
     - 把线段向一端无限延伸，就得到一条**射线**，射线只有一个端点。可以用射线AB 来表示（A是端点，B是射线上另一点）（4年级上）表示端点的字母要写在前面（7年级上）
 
+直线可以看成是点的集合，点A在直线$l$ 上，记作$A\in l$；点B 在直线$l$ 外，记作$B\notin l$（必修2）
+
+### 平面（必修2）
+
+平面是向四周无限延展的，可以用平行四边形表示平面。当平面水平放置时，用来表示的四边形的一边为横向；当平面垂直放置时，用来表示的四边形的一边为竖向。
+
+> 斜二的绘制方式（个人）
+
+- 可以用希腊字母表示平面（$\alpha,\beta,\gamma$），如平面$\alpha$（需要把$\alpha$ 写在四边形的一个角内）
+- 用四个顶点，或者对顶角的两个大写英文字母作为名称，如平面ABCD，平面AC
+
+平面可以看成是点的集合，点A 在平面$\alpha$ 内，记作$A\in \alpha$，点P 在平面$\alpha$ 外，记作$P \notin \alpha$；
+
+平面可以看成是直线的集合，直线$l$ 的所有点都在平面$\alpha$ 内，就说直线$l$ 在平面$\alpha$ 内，记作$l\sub \alpha$；否则就说直线$l$ 不再平面$\alpha$ 内，记作$l\not\subset \alpha$
+
+
+
 ### 角
 
 ##### 定义
@@ -104,7 +121,7 @@
 - 用一个数字或希腊字母（$\alpha$ - alpha，$\beta$ - beta，$\gamma$ - gamma）表示。如$\angle1 , \angle α$
 - 在不引起混淆的情况下，也可以用角的顶点字母来表示这个角。如$\angle O$
 
-> 为了简单起见，在不引起混淆的前提下，角$\alpha$ 或者$\angle \alpha$ 可以简记称 $\alpha$ （必修1）  
+> 为了简单起见，在不引起混淆的前提下，角$\alpha$ 或者$\angle \alpha$ 可以简记称 $\alpha$ （必修1）用字母也一样，如C（必修2）  
 
 **弧度制**：（必修1）
 
@@ -186,103 +203,7 @@
 
 
 
-### 图形
 
-点、线、面、体 称为**几何图形**。图形所表示的各个部分不在同一个平面内的，称为**立体图形**；各个部分在同一个平面内的，称为**平面图形**（7年级上）
-
-
-
-边长（3年级下）
-
-用字母表示面积（S）和周长（C）（5年级上）
-
-
-
-**周长**：封闭图形一周的长度，是它的**周长**（3年级上）
-
-
-
-在解决几何问题时，有时需要添加辅助线，添辅助线的过程要写入证明中，辅助线通常画成虚线。（8年级上）
-
-能够重合的两个图形称为**全等图形**（8年级上）
-
-
-
-对于一种几何图形或几何图形之间的关系，可以通过充要条件给出它的等价定义，通过充分条件给出它的判定定理，通过必要条件给出它的性质定理。（必修1）
-
-#### 弓形
-
-是圆弧和它所对的弦围成的图形，弓形的高是指弧的中点到弦的距离。（9年级上）
-
-#### 多边形（8年级下）
-
-在同一平面内，由任意两条都不在同一条直线上的若干条线段（线段的条数不小于3）首尾顺次相接形成的图形叫做**多边形**。边数为n 的叫做**n 边形**（n 为正整数，且$n\ge 3$）
-
-多边形相邻两边组成的角叫做多边形的**内角**，多边形一边的延长线与相邻的另一边所组成的角叫做多边形的**外角**，多边形每一个内角的顶点叫做多边形的**顶点**，连结多边形不相邻两个顶点的线段叫做多边形的**对角线**
-
-- n 边形的内角和为$(n-1)\times 108^\circ(n\ge 3)$
-- 任何多边形的外角和为$360^\circ$ （每一个顶点只取一个外角）
-
-##### 正多边形（9年级上）
-
-把各边相等，各内角也相等的多边形叫做**正多边形**，根据边数不同分别叫做正三角形、正方形、正五边形等。
-
-#### 相似多边形（9年级上）
-
-对应角相等，对应边成比例的两个多边形，叫做**相似多边形**，相似多边形对应边的比叫做**相似比**，用符号$\sim$表示，读作“相似于”
-
-相似多边形的周长等于相似比；相似多边形的面积之比等于相似比平方
-
-#### 位似
-
-如果两个图形满足以下两个条件：所有经过对应点的直线都相交于同一点；这个交点到两个对应点的距离之比都相等，那么这两个图形就叫做**位似图形**，经过各对应两点的直线的交点叫做**位似中心**，位似中心到两个对应点的距离之比叫做**位似比**
-
-- 当以坐标原点为位似中心时，若原图形上的坐标为（x,y），位似图形与原图形的位似比为k，则位似图形上的对应点的坐标为（kx, ky）或(-kx, -ky)
-
-### 运动
-
-- **对称**，**轴对称图形**。**对称轴**（对折，剪纸）（2年级下）
-
-    如果一个图形沿着一条直线折叠后，直线两侧的部分能够互相重合，那么这个图形叫做轴对称图形，这两条直线叫做对称轴（8年级上）
-
-    - 长方形是有两条对称轴的轴对称图形；正方形是有四条对称轴的轴对称图形；圆也是轴对称图形，任何过圆心的直线都是它的对称轴。（8年级上）
-
-    - 对称轴垂直平分连结两个对称点的线段（8年级上）
-
-    由一个图形变为另一个图形，并使这两个图形沿某一条直线折叠后能够互相重合，这样的图形改变叫做图形的**轴对称**，这条直线叫做对称轴。（8年级上）
-
-    - 成轴对称的两个图形是全等图形（8年级上）
-
-- **平移**，两个图形只要形状、方向、大小一样，就能通过平移互相重合。（2年级下）
-    - 一个图形沿某个方向移动，在移动的过程中，原图形上所有的点都沿同一个方向移动相等的距离，这样的图形运动叫做图形的**平移**（7年级下）
-    - 平移不改变图形的形状和大小（7年级下）
-    - 一个图形和它经过平移所得的图形中，两组对应点的连线平行（或在同一条直线上）且相等（7年级下）
-
-    - 要描述一个平移，必须指出平移的方向和移动的距离（7年级下）
-
-- **旋转**，（风车，陀螺，时针分针）（2年级下）
-
-    一个图形变为另一个图形，在运动的过程中，原图形上的所有点都绕一个固定的点，按同一个方向，转动同一个角度，这样的图形运动叫做图形的**旋转**，这个固定的点叫做旋转中心（9年级上）
-
-    - 图形经过旋转所得的图形和原图形全等。对应点到旋转中心的距离相等，任何一对对应点与旋转中心连线所成的角度等于旋转的角度。（9年级上）
-
-- **相似**
-
-    由一个图形改变为另一个图形，在改变的过程中保持形状不变（大小可以改变），这样的图形改变叫做图形的**相似**（9年级上）
-
-    **放大缩小**（6年级下）是图形相似的应用（9年级上）
-
-    - 相似三角形的定义从两个三角形各要素间的相互关系（边、角）给出了两个三角形相似的充要条件（必修1）
-
-- **中心对称图形**（8年级下）
-
-    如果一个图形绕着一个点旋转$180^\circ$ 后，所得到的的图形能够和和原来的图形互相重合，那么这个图形叫做中心对称图形。这个点叫做**对称中心**
-
-    如果一个图形绕着一个点O 旋转$180^\circ$ 后，能够和另外一个图形互相重合，就称这两个图形关于点O 成中心对称。
-
-    - 对称中心平分连结两个**对称点**的线段
-    
-    
 
 
 
