数学临时部分更新
Signed-off-by: tpout <416756910@qq.com>

--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
@@ -180,6 +180,10 @@
 
 ### 线与角
 
+平面内两条直线相交形成4个角，其中不大于$90^\circ$ 的角称为这**两条直线所成的角（或夹角）**（必修2）
+
+> 规定两条直线平行时所成角为$0^\circ$（必修2）
+
 ##### 定义（7年级下）
 
 <img src="image-20230911153051387.png" alt="image-20231107102715692" style="zoom:50%;" />
