--- a/MyDocs/edu/数学_数形-总结/1图形-2-立体-0-基础.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-2-立体-0-基础.md
@@ -2,6 +2,8 @@
 
 > 默认两个平面指两个不重合的平面
 
+一种基本思路：把空间图形问题转化为平面图形问题
+
 #### 基本事实
 
 - 过不在一条直线上的三个点，有且只有一个平面。（简单说成：不共线的三点确定一个平面）
@@ -26,11 +28,18 @@
 
 - 点与面：点在平面外
 
+    过一点作垂直于已知平面的直线，则该点与垂足间的线段，叫做这个**点到该平面的垂线段**，垂线段的长度叫做这个**点到该平面的距离**
+
 - 线与线：不同在任何一个平面内的两条直线叫做**异面直线**，它们之间没有公共点
 
   与一个平面相交的直线和这个平面内不经过交点的直线是异面直线
 
-- 线与面：线在平面外（线与平面相交，记作$l\cap \alpha=A$；线与平面平行，记作$l//\alpha$）
+- 线与面：线在平面外
+
+    - 线与平面相交，记作$l\cap \alpha=A$
+        - 如果直线 $l$ 与平面 $\alpha$ 内的任意一条直线都垂直，就说直线 $l$ 与平面 $\alpha$ 互相垂直，记作$l\perp\alpha$。直线 $l$ 叫做平面 $\alpha$ 的**垂线**，平面 $\alpha$ 叫做直线 $l$ 的**垂面**，他们唯一的公共点P 叫做**垂足**
+        - 如果直线 $l$ 与平面 $\alpha$ 相交，但不与这个平面垂直，这条直线叫做这个平面的**斜线**，斜线和平面的交点A 叫做**斜足**。过斜线上斜足以外的一点P 向平面 $\alpha$ 引垂线PO，过垂足O 和斜足A 的直线AO 叫做斜线在这个**平面上的射影**
+    - 线与平面平行，记作$l//\alpha$
 
 - 面与面：平行；相交
 
@@ -40,8 +49,22 @@
 - 一条直线与一个平面平行，如果过该直线的平面与此平面相交，那么该直线与交线平行。（性质）
 - 如果一个平面内的两条相交直线与另一个平面平行，那么这两个平面平行（判定）
 - 两个平面平行，如果另一个平面与这两个平面相交，那么两条交线平行（性质）
+- 过一点垂直于已知平面的直线有且只有一条
+- 如果一条直线与一个平面内的两条相交直线垂直，那么该直线与此平面垂直
 
 ### 角
+
+已知两条异面直线a，b，经过空间任一点O 分别作直线a'//a, b'//b ，然后把直线a' 与b' 所成的角叫做**异面直线a 与b 所成的角（或夹角）**
+
+如果两条异面直线所成的角是直角，那么就说这两条异面直线相互垂直。
+
+
+
+平面的一条斜线和它在平面上的射影所成的角，叫做这条**直线和这个平面所成的角**。
+
+
+
+一条直线垂直于平面，所成的角是$90^\circ$ ；一条直线和平面平行，或在平面内，所成的角是$0^\circ$。所以直线与平面所成的角 $\theta$ 的取值范围是$0^\circ\le\theta\le90^\circ$ 
 
 #### 定理
 
@@ -52,8 +75,6 @@
 
 
 
-
-平行、垂直  
 
 垂线、垂面、垂足（垂线段）  
 
