--- a/MyDocs/edu/数学_数形-总结/1图形-2-立体-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-2-立体-1-课本练习.md
@@ -31,6 +31,20 @@
   <img src="image-20231203222713261.png" alt="image-20231203222713261" style="zoom:25%;" />
 
   求证$\frac{AB}{BC}=\frac{DE}{EF}$
+  
+- 如图，在正三棱柱ABC-A'B'C' 中，D 为棱AC 的中点，AB=BB'=2
+
+  <img src="image-20231204160737698.png" alt="image-20231204160737698" style="zoom:25%;" />
+
+  求证 $BD\perp AC'$ 
+  
+- 过$\triangle ABC$ 所在平面$\alpha$ 外一点P，做$PO\perp\alpha$，垂足为O，连接PA，PB，PC
+
+  （1）若PA=PB=PC，则点O 是$\triangle ABC$ 的`____` 心
+
+  （2）若PA=PB=PC，$\angle C=90^\circ$，则点O 是AB 边的`____` 心
+
+  （3）若$PA\perp PB,PB\perp PC,PC\perp PA$，垂足都为P，则点O 是$\triangle ABC$ 的`____` 心
 
 ### 角
 
@@ -46,4 +60,10 @@
 
   求证：$\triangle ABC \cong \triangle A'B'C'$
 
-  
+- 已知正方体ABCD-A'B'C'D'，求直线BA‘ 与AC 所成的角的大小
+
+- 如图，在正方体$ABCD-A_1B_1C_1D_1$ 中，$O_1$ 为底面$A_1B_1C_1D_1$ 的中心
+
+  <img src="image-20231204152933927.png" alt="image-20231204152933927" style="zoom:25%;" />
+
+  求证$AO_1\perp BD$
