整理到统计之前
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
@@ -83,7 +83,7 @@
 
 平面可以看成是直线的集合，直线$l$ 的所有点都在平面$\alpha$ 内，就说直线$l$ 在平面$\alpha$ 内，记作$l\sub \alpha$；否则就说直线$l$ 不再平面$\alpha$ 内，记作$l\not\subset \alpha$
 
-
+平面内的一条直线把平面分成两部分，这两部分通常称为半平面。
 
 ### 角
 
@@ -204,12 +204,4 @@
 - 两条平行线被第三条直线所截，同位角相等。简单的说：两直线平行，同位角相等
 - 两条平行线被第三条直线所截，内错角相等。简单的说：两直线平行，内错角相等
 - 两条平行线被第三条直线所截，同旁内角互补。简单的说：两直线平行，同旁内角互补
-
-
-
-
-
-
-
-
 
