--- a/MyDocs/edu/数学_数形-总结/1图形-2-立体-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-2-立体-1-课本练习.md
@@ -1,8 +1,10 @@
 
 
-### 点线面之间的位置关系
+
 
 - 不共面的四点可以确定几个平面？请画出图形说明你的结论
+
+- 三个平面可以将空间分成几个部分？请分情况说明
 
 - 设直线a，b 分别是长方体的相邻两个面的对角线所在的直线，则a 与b是什么位置关系
 
@@ -19,6 +21,10 @@
 - 在正方体ABCD-A'B'C'D' 中，E 为$DD_1$ 的中点，判断$BD_1$ 与平面AEC 的位置关系，并说明理由。
 
 - 判断：平面$\alpha$ 与平面$\beta$ 平行的充分条件是“$\alpha$ 内有无穷多条直线都与$\beta$ 平行”
+
+- 已知m，n 为异面直线，m$\bot$ 平面$\alpha$ , n$\bot$ 平面$\beta$ 。若直线$l$ 满足$l \bot m,l \bot n, l\subsetneqq \alpha, l \subsetneqq \beta$ 则：
+
+  A. $\alpha // \beta, l // \alpha$    B. $\alpha, \beta$ 相交且交线平行于$l$    C. $\alpha \bot \beta, l \bot \beta$    D. $\alpha,\beta$ 相交且交线垂直于$l$ 
 
 - 如图，在正方体ABCD-A'B'C'D' 中，M，N，E，F 分别是棱$A_1B_1,A_1D_1,B_1C_1,C_1D_1$ 的中点
 
@@ -46,8 +52,6 @@
 
   （3）若$PA\perp PB,PB\perp PC,PC\perp PA$，垂足都为P，则点O 是$\triangle ABC$ 的`____` 心
 
-### 角
-
 - 如图，在四面体A-BCD 中，E、F、G分别为AB，AC，AD 上的点
 
   <img src="image-20231124214029521.png" alt="image-20231124214029521" style="zoom:25%;" />
@@ -67,3 +71,33 @@
   <img src="image-20231204152933927.png" alt="image-20231204152933927" style="zoom:25%;" />
 
   求证$AO_1\perp BD$
+
+- 如图，在四棱锥P-ABCD 中，底面ABCD 为正方形，$PA\bot 底面ABCD$ ，PA=AB，E 为线段PB 的中点，F 为线段BC 上的动点，平面AEF 与平面PBC 是否互相垂直？
+
+  <img src="image-20240302140456839.png" alt="image-20240302140456839" style="zoom:15%;" />
+
+  如果垂直，请证明；如果不垂直，请说明理由
+
+- 如下图，四边形A'B'C'D' 是平行四边形ABCD 在平面$\alpha$上的投影（AA'//BB'//CC'//DD'），
+
+  <img src="image-20240302142540662.png" alt="image-20240302142540662" style="zoom:25%;" />
+
+  求证：四边形A'B'C'D' 是平行四边形
+
+- <img src="image-20240302145515162.png" alt="image-20240302145515162" style="zoom: 50%;" />
+
+- 如图，在正方形$ABCD-A_1B_1C_1D_1$ 中，求证：
+
+  <img src="image-20240302150512148.png" alt="image-20240302150512148" style="zoom:25%;" />
+
+  （1）$B_1D\bot$ 平面$A_1BC_1$
+
+  （2）$B_1D$ 与平面$A_1BC_1$ 的交点H 是$\triangle A_1C_1B$ 的重心
+
+- 如图，在三棱锥P-ABC 中，$\angle ACB=90^\circ$，PA$\bot$ 底面ABC
+
+  <img src="image-20240302152307925.png" alt="image-20240302152307925" style="zoom:50%;" />
+
+  （1）求证：平面PAC$\bot$ 平面PBC
+
+  （2）若AC=BC=PA，M 是PB 的中点，求AM 与平面PBC 所成角的正切值
