--- a/MyDocs/edu/数学_数形-总结/2数形-2-三角函数-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/2数形-2-三角函数-0-概念.md
@@ -178,6 +178,27 @@ $sinA =\frac{\angle A的对边}{斜边}; cosA=\frac{\angle A的邻边}{斜边}; 
 
 
 
+### 余弦正弦（必修2）：
+
+> 由向量知识点可推
+
+#### 余弦定理
+
+三角形中任何一边的平方，等于其他两边平方的和减去这两边与它们夹角的余弦的积的两倍：
+
+- $a^2 = b^2 + c^2 - 2bc\space cosA \Leftrightarrow cosA = \frac{b^2 + c^2 - a^2}{2bc}$ 
+- $b^2=c^2+a^2-2ca\space cosB \Leftrightarrow cosB = \frac{c^2 + a^2 - b^2}{2ca}$
+- $c^2=a^2+b^2-2ab\space cosC \Leftrightarrow cosC = \frac{a^2 + b^2 - c^2}{2ab}$
+
+#### 正弦定理
+
+在一个三角形中，各边和它所对角的正弦的比相等：
+
+- $\frac{a}{sinA} = \frac{b}{sinB} = \frac{c}{sinC}$
+
+
+
 ### 拓展
 
 复合音 $y=sinx+\frac{1}{2}sin2x+\frac{1}{3}sin3x+\frac{1}{4}sin4x+...$
+
