--- a/MyDocs/edu/数学_数形-总结/2数形-2-三角函数-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/2数形-2-三角函数-1-课本练习.md
@@ -64,3 +64,11 @@ $cosx=1-\frac{x^2}{2!}+\frac{x^4}{4!}-\frac{x^6}{6!}+...$
 - 如图在扇形OPQ 中，半径OP=1，圆心角$\angle POQ=\frac{\pi}{3}$，C 是扇形弧上的动点，矩形ABCD 内接于扇形，记$\angle POC=\alpha$，求当角$\alpha$ 取何值时，矩形ABCD 的面积最大，并求出这个最大面积 
 
   <img src="image-20231109153046478.png" alt="image-20231109153046478" style="zoom:25%;" />
+  
+- 如图，在三棱锥V-ABC 中，VA=VB=AB=AC=BC=2，VC=1
+
+  <img src="image-20240302134248189.png" alt="image-20240302134248189" style="zoom:25%;" />
+
+  求AB 中点O，所构成的角VOC 的余弦值
+
+  
