--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-1-课本练习.md
@@ -16,5 +16,10 @@
 
   （提示：从午夜零时算起，假设分针走了t min 会与时针重合，一天内分针和时针会重合n 次，利用分针与时针转动的速度，建立t 关于n 的函数解析式，并求解）
 
+### 线与面
 
+- 已知$\alpha,\beta$ 是两个不同的平面，m 为平面$\alpha$ 内的一条直线，则$\alpha\bot \beta$ 是$m\bot \beta$ 的：  B
 
+  A. 充分不必要条件。  B. 必要不充分条件.   C. 充要条件。  D. 既不充分也不必要条件
+
+- 
