必修2 整理完
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/0数-0-通用.md
+++ b/MyDocs/edu/数学_数形-总结/0数-0-通用.md
@@ -29,3 +29,7 @@
 
 $\angle A\overset{m}{=}\frac{1}{2}\overset{\LARGE{\frown}}{BCD}$ （这里的$\overset{m}{=}$ 应该是把弧的角度，描述为对应的角度）
 
+
+
+求和符号$\sum$ （必修2）
+
