--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
@@ -6,14 +6,19 @@
 
 - 定义
     - 拉紧的一段线，可以看作一条线段。线段是直的，可以量出长度。（2年级上）
+    
     - **线段** 有两个端点，可以用线段AB 来表示（AB 为两个端点）（4年级上），也可以用一个小写字母表示。如"线段a"（7年级上）
-
+    
     - 两点间所有连线中线段最短，这条线段的长度叫作**两点间的距离**（4年级下）
-
+    
     - 若点C 把线段AB 分成相等的两条线段AC 与BC，那么点C 叫做线段AB 的**中点**（三等分类似）（7年级上）
-
+    
     - **延长线段AB** 是指将线段沿AB 方向延长。若沿BA 方向延长线段，则要说成“延长线段BA”。线段的延长线通常画成虚线（7年级上）
-
+    
+    - 在线段AB 的两个端点中，规定一个顺序，假设A 为起点，B 为终点，此时就说线段AB 具有方向。具有方向的线段叫做**有向线段**。通常在有向线段的终点处画上箭头表示它的方向。记作$\vec{AB}$。线段AB 的长度也叫做有向线段$\vec{AB}$ 的**长度**，记作$\vec{|AB|}$。有向线段包含三个要素：起点、方向、长度。（必修2）
+    
+      > 表示有向线段时，起点一定要写在终点的前面
+    
 - 运算
 
     - 如果两条线段长度相等，我们就说这两条线段相等，记作AB=AC（大小类似，转换为长度比较）（7年级上）
