--- a/MyDocs/edu/数学_数形-总结/3数形-2-三角函数-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/3数形-2-三角函数-1-课本练习.md
@@ -71,4 +71,24 @@ $cosx=1-\frac{x^2}{2!}+\frac{x^4}{4!}-\frac{x^6}{6!}+...$
 
   求AB 中点O，所构成的角VOC 的余弦值
 
-  
+### 余弦正弦
+
+- 在$\triangle ABC$ 中，已知$a=5,b=2,C=\frac{\pi}{3}$，求c
+
+- 在$\triangle ABC$ 中，已知$a=2,c=\frac{2\sqrt{3}}{3},A=120^\circ$，求b 和C
+
+- 在$\triangle ABC$ 中，已知$cosA=\frac{4}{5},B=\frac{\pi}{3},b=\sqrt{3}$，求a, c
+
+- 在三角形ABC 中，设三边分别为a，b，c，边BC 上的中线记为$m_a$，利用余弦定理证明：$m_a=\frac{1}{2}\sqrt{2(b^2+c^2)-a^2}$
+
+- 证明：设三角形的外接圆的半径是R，则a=2RsinA
+
+- 如图，在山脚A 测得山顶P 的仰角为$\alpha$, 沿倾斜角为$\beta$ 的斜坡向上走a 距离到达B 处，到B 处测得山顶P 到仰角为$\gamma$，
+
+  <img src="image-20231113160023840.png" alt="image-20231113160023840" style="zoom:25%;" />
+
+  求证：山高$h=\frac{asin\alpha sin(\gamma-\beta)}{sin(\gamma-\alpha)}$
+
+- 已知a,b,c 分别是三角形ABC 三个内角A，B，C 的对边，且$acosC+\sqrt{3}asinC-b-c=0$，求A。
+
+  若a=2，则三角形ABC 的面积为$\sqrt{3}$，求b，c
