--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-0-概念.md
@@ -2,17 +2,9 @@
 
 既有大小又有方向的量叫做**向量**，而只有大小没有方向的量叫做数量
 
-在线段AB 的两个端点中，规定一个顺序，假设A 为起点，B 为终点，此时就说线段AB 具有方向。具有方向的线段叫做**有向线段**。通常在有向线段的终点处画上箭头表示它的方向。记作$\vec{AB}$。线段AB 的长度也叫做有向线段$\vec{AB}$ 的**长度**，记作$\vec{|AB|}$
+向量用有向线段表示，也可以用字母**a**,**b**,**c**,... 表示（印刷），书写用$\vec a$ 的形式
 
-> 表示有向线段时，起点一定要写在终点的前面
-
-
-
-有向线段包含三个要素：起点、方向、长度。
-
-向量$\vec{AB}$ 的**大小**称为向量$\vec{AB}$ 的长度（或称**模**）。长度为0 的向量叫做**零向量**，记作**0**；长度等于1 个单位长度的向量，叫做单位**向量**。
-
-向量也可以用字母**a**,**b**,**c**,... 表示（印刷），书写用$\vec a$ 的形式
+向量$\vec{AB}$ 的**大小**称为向量$\vec{AB}$ 的长度（或称**模**），记作|**a**|或者$|\vec{AB}|$。长度为0 的向量叫做**零向量**，记作**0**；长度等于1 个单位长度的向量，叫做单位**向量**。
 
 
 
@@ -20,7 +12,7 @@
 
 长度相等且方向相同的向量叫做**相等向量**。记作**a**=**b**。（与起点无瓜）
 
-有上两条可得，任一组平行向量都可以平移到同一条直线上，所以平行向量也叫做**共线向量**。
+由上两条可得，任一组平行向量都可以平移到同一条直线上，所以平行向量也叫做**共线向量**。
 
 
 
@@ -30,7 +22,15 @@
 
 
 
-已知两个非零向量**a**，**b**，O时平面上的任意一点，作$\vec{OA}=$**a**,$\vec{OB}=$**b**，则$\angle AOB=\theta(0\le\theta\le\pi)$ 叫做向量**a** 与**b** 的**夹角**
+平行于同一个平面的向量，叫做**共面向量**。（选修1）
+
+> 任意两个空间向量都可以平移到同一个平面内，成为同一个平面内的两个向量
+
+
+
+已知两个非零向量**a**，**b**，O是平面上的任意一点，作$\vec{OA}=$**a**,$\vec{OB}=$**b**，则$\angle AOB=\theta(0\le\theta\le\pi)$ 叫做向量**a** 与**b** 的**夹角**。（必修2）
+
+夹角可记作<**a**, **b**>（选修1）
 
 > 理解一下同向、反向、垂直时，夹角各为多少
 
