--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-课本练习.md
@@ -76,6 +76,12 @@
 
 - 已知**a**，**b**是两个不共线的向量，向量**b**-t**a**，$\frac{1}{2}$**a**-$\frac{3}{2}$**b** 共线，求实数t 的值
 
+- 如图，已知平行四边形ABCD，过平面AC 外一点O 作射线OA，OB，OC，OD，在四条射线上分别取点E，F，G，H，使$\frac{OE}{OA}=\frac{OF}{OB}=\frac{OG}{OC}=\frac{OH}{OD}=k$
+
+  <img src="image-20240307185553751.png" alt="image-20240307185553751" style="zoom:25%;" />
+
+  求证：E，F，G，H 四点共面
+
 
 
 ### 正交分解
@@ -137,28 +143,6 @@
   你能发现AR，RT，TC 之间的关系吗？用向量方法证明你的结论
 
 - 若平面向量**a**,**b**,**c** 两两的夹角相等，且|**a**|=1,|**b**|=1,|**c**|=3，则|**a**+**b**+**c**|=`____`
-
-### 余弦正弦
-
-- 在$\triangle ABC$ 中，已知$a=5,b=2,C=\frac{\pi}{3}$，求c
-
-- 在$\triangle ABC$ 中，已知$a=2,c=\frac{2\sqrt{3}}{3},A=120^\circ$，求b 和C
-
-- 在$\triangle ABC$ 中，已知$cosA=\frac{4}{5},B=\frac{\pi}{3},b=\sqrt{3}$，求a, c
-
-- 在三角形ABC 中，设三边分别为a，b，c，边BC 上的中线记为$m_a$，利用余弦定理证明：$m_a=\frac{1}{2}\sqrt{2(b^2+c^2)-a^2}$
-
-- 证明：设三角形的外接圆的半径是R，则a=2RsinA
-
-- 如图，在山脚A 测得山顶P 的仰角为$\alpha$, 沿倾斜角为$\beta$ 的斜坡向上走a 距离到达B 处，到B 处测得山顶P 到仰角为$\gamma$，
-
-  <img src="image-20231113160023840.png" alt="image-20231113160023840" style="zoom:25%;" />
-
-  求证：山高$h=\frac{asin\alpha sin(\gamma-\beta)}{sin(\gamma-\alpha)}$
-
-- 已知a,b,c 分别是三角形ABC 三个内角A，B，C 的对边，且$acosC+\sqrt{3}asinC-b-c=0$，求A。
-
-  若a=2，则三角形ABC 的面积为$\sqrt{3}$，求b，c
 
 
 
