到向量空间坐标之前
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-平面.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-平面.md
@@ -1,1 +1,35 @@
+**平面向量基本定理** ：如果$e_1,e_2$ 是同一平面内的两个不共线向量，那么对于这一平面内的任一向量**a**，有且只有一对实数$\lambda_1,\lambda_2$，使$a = λ_1e_1 + λ_2e_2$ 。把$\{e_1,e_2\}$ 叫做表示这一平面内所有向量的一个**基底**
 
+推论：
+
+- $\vec{OA},\vec{OB}$ 不共线，且$\vec{AP}=t\vec{AB}(t\in R)$（即ABP 三点共线），用$\vec{OA},\vec{OB}$ 表示$\vec{OP}$ 时，$\vec{OP}=(1-t)\vec{OA}+t\vec{OB}$。注意两者的系数和为1。拓展的讲，只要ABP 共线，然后表示$\vec{OP}=m\vec{OA}+n\vec{OB}$，那么m+n = 1
+
+#### 向量坐标：   
+
+由基本定理可知，有且只有一对实数x,y 使得向量**a** 的坐标表示为 **a** = x**i** +y**j** (其中**i**,**j** 是单位向量，此时{**i**,**j**} 为基底)      
+
+由此把有序数对(x,y) 叫做向量**a** 的坐标，记作**a**=(x,y)，这个式子叫做向量**a** 的坐标表示。x 叫做**a** 在x 轴上的坐标，y叫做**a** 在y轴上的坐标
+
+显然 
+
+- **i**=(1,0) , **j**=(0,1),**0**=(0,0)
+
+- 两个向量和（差）的坐标分别等于这两个向量相应坐标的和（差）
+
+- 一个向量的坐标等于表示此向量的有向线段的终点的坐标减去起点的坐标：**a**=$(x_2-x_1,y_2-y_1)$,|**a**|=$\sqrt{(x_2-x_1)^2+(y_2-y_1)^2}$
+
+  > 若**a**=(x,y)，则|**a**|$^2=x^2+y^2$，或者说|**a**|=$\sqrt{x^2+y^2}$
+
+- 实数与向量的积的坐标等于用这个实数乘原来向量的相应坐标
+
+- **中点坐标公式**：若点$P_1,P_2$ 的坐标分别为$(x_1,y_1),(x_2,y_2)$，线段$P_1P_2$ 的中点P 的坐标为(x,y)，则$x=\frac{x_1+x_2}{2};y=\frac{y_1+y_2}{2}$
+
+
+
+推论：
+
+- 共线的条件：$x_1y_2=x_2y_1$ 
+- 两个向量的数量积等于它们对应坐标的乘积的和：**a**$\cdot$**b**=$x_1x_2+y_1y_2$ 
+- $cos θ = \frac{a*b}{|a||b|} = \frac{x_1x_2 + y_1y_2}{\sqrt{x_1^2 + y_1^2}\sqrt{x_2^2+y_2^2}}$
+
+ 
