--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-课本练习.md
@@ -70,7 +70,25 @@
 
 - 在任意四边形ABCD 中，E，F 分别为AD，BC 的中点，求证：$\vec{AB}+\vec{DC}=2\vec{EF}$
 
+- 如图，线段AB，BD 在平面$\alpha$ 内，$BD\bot AB,AC \bot \alpha$，且AB=a，BD=b，AC=c，
 
+  <img src="image-20240308160710348.png" alt="image-20240308160710348" style="zoom:25%;" />
+
+  求C，D 两点间的距离
+
+- 【带点猜测？】如图，在正三棱柱ABC-A'B'C' 中，若AB=$\sqrt2 BB_1$，
+
+  <img src="image-20240308155258164.png" alt="image-20240308155258164" style="zoom:25%;" />
+
+  则$AB_1$ 于$BC_1$ 所成角的大小为：`90`
+
+- 如图，在四面体OABC 中，$OA\bot BC,OB\bot AC$ 
+
+  <img src="image-20240308165011038.png" alt="image-20240308165011038" style="zoom:25%;" />
+
+  求证$OC\bot AB$  
+
+  
 
 ### 定理
 
