--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-2-空间.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-2-空间.md
@@ -1,1 +1,10 @@
+#### 空间向量基本定理
+
+如果三个向量**a,b,c** 不共面，那么对任意一个空间向量**p**，存在唯一的有序实数组(x,y,z)，使得 **p**=x**a** + y**b** + z**c**
+
+
+
+此时{**a,b,c**} 叫做空间的一个基底，**a,b,c** 都叫做基向量。
+
+如果空间的一个基底中的三个基向量两两垂直，且长度都为1，那么这个基底叫做**单位正交基底**，常用{**i,j,k**}来表示。此时任意向量**a**，可以分解为三个向量：x**i**,y**j**,z**k**，使得**a**=x**i** + y**j** + z**k**。此时把空间向量分解为三个两两垂直的向量，叫做空间向量的**正交分解**
 
