选修1第一章向量完结
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/1图形-2-立体-0-基础.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-2-立体-0-基础.md
@@ -58,6 +58,10 @@
 
 在二面角$\alpha-l-\beta$ 上任取一点O，以点O 为垂足，在半平面$\alpha$ 和$\beta$ 内分别作垂直于棱$l$ 的射线OA 和OB，则射线OA 和OB 构成的$\angle AOB$ 叫做二面角的平面角。二面角的大小可以用它的平面角来度量，其取值范围是$0^\circ \le \alpha \le 180^\circ$。平面角是直角的二面角叫做**直二面角**
 
+
+
+平面$\alpha$ 与平面$\beta$ 相交，形成四个二面角，把这四个二面角中不大于$90^\circ$ 的二面角称为平面$\alpha$ 与平面$\beta$ 的夹角（选修1）
+
 ### 线与面
 
 - 线与线：不同在任何一个平面内的两条直线叫做**异面直线**，它们之间没有公共点
