--- a/MyDocs/edu/数学_数形-总结/3数形-2-三角函数-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/3数形-2-三角函数-1-课本练习.md
@@ -92,3 +92,9 @@ $cosx=1-\frac{x^2}{2!}+\frac{x^4}{4!}-\frac{x^6}{6!}+...$
 - 已知a,b,c 分别是三角形ABC 三个内角A，B，C 的对边，且$acosC+\sqrt{3}asinC-b-c=0$，求A。
 
   若a=2，则三角形ABC 的面积为$\sqrt{3}$，求b，c
+  
+- 如图，二面角$\alpha-l-\beta$ 的棱上由两个点A，B，线段BD 与AC 分别在这个二面角点两个面内，并且都垂直于棱 $l$。若AB=4，AC=6，BD=8，CD=$2\sqrt{17}$ 
+
+  <img src="image-20240314140847373.png" alt="image-20240314140847373" style="zoom:25%;" />
+
+  求平面$\alpha$ 与平面$\beta$ 的夹角
