--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-平面.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-1-平面.md
@@ -1,4 +1,6 @@
-**平面向量基本定理** ：如果$e_1,e_2$ 是同一平面内的两个不共线向量，那么对于这一平面内的任一向量**a**，有且只有一对实数$\lambda_1,\lambda_2$，使$a = λ_1e_1 + λ_2e_2$ 。把$\{e_1,e_2\}$ 叫做表示这一平面内所有向量的一个**基底**
+## 平面向量（必修2）
+
+**基本定理** ：如果$e_1,e_2$ 是同一平面内的两个不共线向量，那么对于这一平面内的任一向量**a**，有且只有一对实数$\lambda_1,\lambda_2$，使$a = λ_1e_1 + λ_2e_2$ 。把$\{e_1,e_2\}$ 叫做表示这一平面内所有向量的一个**基底**
 
 推论：
 
