--- a/MyDocs/edu/数学_数形-总结/4数形-0-向量-2-空间-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/4数形-0-向量-2-空间-课本练习.md
@@ -14,6 +14,72 @@
 
   <img src="image-20240311155711556.png" alt="image-20240311155711556" style="zoom:25%;" />
 
-  求证$CA_1\bot平面C_1BD$
+  求证$CA_1\bot平面C_1BD$ 
 
-   
+- 在长方体$ABCD-A_1B_1C_1D_1$ 中，AB=4，BC=3，$CC_1$=2，以D 为原点，以$\{\frac{1}{3}\vec{DA},\frac{1}{4}\vec{DC},\frac{1}{2}\vec{DD_1}\}$ 为空间的一个单位正交基底，建立空间直角坐标系$Oxyz$，求平面$ACD_1$ 的一个法向量
+
+- 如图在长方体$ABCD-A_1B_1C_1D_1$ 中，AB=4，BC=3，$CC_1$=2，
+
+  <img src="image-20240313181416154.png" alt="image-20240313181416154" style="zoom:25%;" />
+
+  问线段$B_1C$ 上是否存在点P，使得$A_1P//平面ACD_1$ 
+
+- 如图在平行六面体$ABCD-A_1B_1C_1D_1$ 中，AB=AD=$AA_1$=1，$\angle A_1AB=\angle A_1AD=\angle BAD=60^\circ$
+
+  <img src="image-20240313183055343.png" alt="image-20240313183055343" style="zoom:25%;" />
+
+  求证：直线$A_1C\bot 平面BDD_1B_1$
+
+- 如图在长方体$ABCD-A_1B_1C_1D_1$ 中，AB=2，BC=$CC_1$=1，E 是CD 的中点，F 是BC 的中点
+
+  <img src="image-20240313183732477.png" alt="image-20240313183732477" style="zoom:25%;" />
+
+  求证：平面$EAD_1\bot EFD_1$
+
+- 如图在棱长为1 点正方体$ABCD-A_1B_1C_1D_1$ 中，E 为线段$A_1B_1$ 的中点，F 为线段AB 的中点
+
+  <img src="image-20240313190521593.png" alt="image-20240313190521593" style="zoom:25%;" />
+
+  （1）求点B 到直线$AC_1$ 的距离；（2）求直线FC 到平面$AEC_1$ 的距离
+  
+- 如图在四棱锥P-ABCD 中，底面ABCD 是正方，侧棱$PD\bot 底面ABCD$，PD=DC，E 是PC 的中点，作$EF\bot PB$ 交PB 于点F
+
+  <img src="image-20240314135608567.png" alt="image-20240314135608567" style="zoom:25%;" />
+
+  （1）求证：PA // 平面EDB
+
+  （2）求证：PB $\bot$ 平面EFD
+
+  （3）求平面CPB 与平面PBD 的夹角的大小
+
+- 如图在四面体ABCD中，AD$\bot$ 平面BCD，M是AD 的中点，P 是BM 的中点，点Q 在线段AC 上，且AQ=3QC
+
+  <img src="image-20240314142652740.png" alt="image-20240314142652740" style="zoom:25%;" />
+
+  求证：PQ // 平面BCD
+
+- 已知空间三点A(0,2,3), B(-2,1,6), C(1,-1,5) 
+
+  （1）求以AB，AC 为邻边点平行四边形点面积
+
+  （2）若向量**a** 分别与$\vec{AB},\vec{AC}$ 垂直，且|**a**| = $\sqrt3$，求向量**a** 的坐标
+
+- 如图在长方体$ABCD-A_1B_1C_1D_1$ 中，点E，F分别在$BB_1,DD_1$ 上，且$AE\bot A_1B, AF\bot A_1D$ 
+
+  <img src="image-20240314154901251.png" alt="image-20240314154901251" style="zoom:25%;" />
+
+  求证：$A_1C\bot$ 平面AEF
+
+- 如图把正方形纸片ABCD 沿对角线AC 折成直二面角，E，F分别为AD，BC 的中点，O是原正方形ABCD 的中心，
+
+  <img src="image-20240314155228437.png" alt="image-20240314155228437" style="zoom:25%;" />
+
+  求折纸后$\angle EOF$ 的大小
+
+- 求正四棱锥S-ABCD 中，O 为顶点S 在底面内的射影，P 为侧棱SD 的中点，且SO=OD，求直线BC 与平面PAC 所成的角
+
+- 如图两条异面直线a，b 所成的角为$\theta$，在直线a,b 上分别取点A‘，E 和点A，F，使得$AA'\bot a, AA'\bot b$。 已知A‘E = m, AF=n, EF=$l$，
+
+  <img src="image-20240314160830107.png" alt="image-20240314160830107" style="zoom:25%;" />
+
+  求线段AA' 的长
