--- a/MyDocs/edu/数学_数形-总结/3数形-0-数轴-0.md
+++ b/MyDocs/edu/数学_数形-总结/3数形-0-数轴-0.md
@@ -55,3 +55,13 @@ x轴和y轴上的点不属于任何象限
 
 **平移：**（基本了解）
 
+
+
+### 空间直角坐标系（选修1）
+
+以点O 为原点，以单位正交基底{**i, j, k**} 的方向为正方向，以它们的长为单位长度建立三条数轴：x 轴，y 轴，z 轴（都叫坐标轴），此时就建立了一个**空间直角坐标系**$Oxyz$，O 叫做原点，**i, j, k** 都叫做**坐标向量**。通过每两条坐标轴的平面叫做**坐标平面**，分别称作$Oxy, Oyz, Ozx$ 平面，它们把空间分为八个部分。
+
+画空间直角坐标系$Oxyz$ 时，一般使$\angle xOy=135^\circ$, 或$45^\circ，\angle yOz=90^\circ$  
+
+在空间直角坐标系中，让右手拇指指向x 轴的正方向，食指指向y 轴的正方向，如果中指指向z 轴的正方向，则称这个坐标系为**右手直角坐标系**。
+
