--- a/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-0-基础-0-概念.md
@@ -74,6 +74,9 @@
     - 把线段向一端无限延伸，就得到一条**射线**，射线只有一个端点。可以用射线AB 来表示（A是端点，B是射线上另一点）（4年级上）表示端点的字母要写在前面（7年级上）
 
 直线可以看成是点的集合，点A在直线$l$ 上，记作$A\in l$；点B 在直线$l$ 外，记作$B\notin l$（必修2）
+一个点和一个方向确定一条直线（选修1）
+
+“两条直线”一般指两条不重合的直线（选修1）
 
 ### 平面（必修2）
 
