--- a/MyDocs/edu/数学_数形-总结/1图形-2-立体-2-立体图形-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/1图形-2-立体-2-立体图形-0-概念.md
@@ -74,6 +74,16 @@
   
   圆锥可以看做将一个直角三角形绕它的一条直角边（AC）旋转一周，它的其余各边所成的面围成一个几何体。直角边BC 旋转所成的面就是圆锥的**底面**，斜边AB 旋转所成的面就是圆锥的**侧面**，斜边AB 不论转动到哪一个位置，都叫做圆锥的**母线**（9年级下）记作SO（必修2）
   
+  用一个垂直于圆锥的轴的平面截圆锥，截口曲线（截面与圆锥侧面的交线）是一个圆（选修1）
+  
+  用一个不垂直于圆锥的轴 平面截圆锥，当圆锥的轴与截面所成的角不同时，可以得到不同的截口曲线，它们分别是椭圆、抛物线和双曲线，通常把这三种曲线统称为**圆锥曲线**（选修1）
+  
+  > 为什么同是截口曲线，其他的是圆锥曲线？而圆不是呢
+  >
+  > 因为实际上这是结果定义。最开始就是研究圆在一个点光源的投影下，在各平面的曲线。而点和圆上所有点的连线，构成了圆锥，且反向对称一下，有双圆锥。此时对于平面上的投影，可以理解为平面对双圆锥的截口。
+  >
+  > 所以从这个角度讲，圆锥曲线是圆的衍生，不是一类
+  
 - 圆台（必修2）
 
   用平行于圆锥底面的平面去截圆锥，底面与截面之间的部分叫做**圆台**。记作O'O
