知识点记录完毕，开始整合顺序
Signed-off-by: 李圣杰 <lishengjie@lishengjiedeMacBook-Pro.local>

--- a/MyDocs/edu/数学_数形-总结/0数-2-代数-0-基本-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/0数-2-代数-0-基本-1-课本练习.md
@@ -1,6 +1,24 @@
-#### 基本
+## 代数
+
+推论：
+
+在$(a+b)^n$ 的展开式中，奇数项的二项式系数的和等于偶数项的二项式系数的和。
+
+### 课本练习
+
+##### 指数
 
 - 已知$a^{\frac{1}{2}}+a^{-\frac{1}{2}}=3$ ，求$a^2+a^{-2}$ 的值
+- 在$(x-1)(x-2)(x-3)(x-4)(x-5)$ 的展开式中，含$x^4$ 的项的系数是`____`
+- 求$(x+\frac{1}{x})^6$ 的展开式
+- 求$(2\sqrt{x}-\frac{1}{\sqrt{x}})^6$ 的展开式中$x^2$ 的系数
+- 求$(1-2x)^5(1+3x)^4$ 的展开式中按x 的升幂排列的第3 项
+- 在$(1+x)^3+(1+x)^4+...+(1+x)^{n+2}$ 的展开式中，含$x^2$ 项的系数是多少？    
+- 求$C^1_{11}+C^3_{11}+C^5_{11}+...+C^{11}_{11}$ 的值
+- 证明：$(x-\frac{1}{x})^{2n}$ 的展开式中常数项是$(-2)^n\cdot\frac{1\times 3\times 5\times ...\times(2n-1)}{n!}$
+- 用二项式定理证明$55^{55}+9$ 能被8 整除
+
+##### 对数
 
 - 若$lg\space a(a>0)$ 与$lg\space b(b>0)$ 互为相反数，则:
 
@@ -8,6 +26,4 @@
 
 - 已知$lg2=a,lg3=b$，求下列各式的值：
 
-  A. $lg6$    B.$log_34$    C. $log_212$    D. $lg\frac{3}{2}$
-
- 
+  A. $lg6$    B.$log_34$    C. $log_212$    D. $lg\frac{3}{2}$                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
