--- a/MyDocs/edu/数学_数形-总结/0数-5-统计-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/0数-5-统计-0-概念.md
@@ -127,7 +127,7 @@ $$
   $$
   \frac{1}{n}\sum_{i=1}^{n}(x_i-\overline x)^2
   $$
-  有时为了计算方便：
+  有时为了计算方便（等同于上式，具体推导可以看选3的随机变量方差公式）：
   $$
   \frac{1}{n}\sum_{i=1}^{n}x_i^2-\overline x^2
   $$
@@ -172,6 +172,10 @@ $$
     纵轴表示$\frac{频率}{组距}$。
   
   可以通过直方图，估计推测样本平均数：表示为样本数据与它的频率的乘积之和；中位数：其左边和右边的直方图面积应该相等；众数：最多的即可。
+  
+- 散点图：
+
+  用图形表示成对样本数据的变化特征（用横轴表示一个变量，纵轴表示另一个变量，就可以把数据用直角坐标系中的点表示出来）（选3）
   
   
 
