--- a/MyDocs/edu/数学_数形-总结/2逻辑-2-可能性-1-课本练习.md
+++ b/MyDocs/edu/数学_数形-总结/2逻辑-2-可能性-1-课本练习.md
@@ -1,3 +1,44 @@
+推论：
+
+$P(A_1A_2...A_n)=P(A_1)*P(A_2|A_1)*P(A_3|A_1A_2)*...*P(A_n|A_1A_2...A_{n-1})$
+
+
+
 - 如果不给两枚骰子标记号，则不能区分所投掷出的两个点数分别属于哪枚骰子。请问此时的两枚骰子投掷出的结果样本空间有多少个样本点？事件A = “两个点数之和是5 点” 的样本点又有多少个？此时事件A 的概率是后者除以前者吗？
 - 设样本空间$\Omega={a,b,c,d}$ 含有等可能的样本点，且$A={a,b},B={a,c},C={a,d}$ 。请验证A,B,C 三个事件两两独立，但$P(ABC)\neq P(A)P(B)P(C)$  
   - 假设P(A) = 0.7,P(B) = 0.8，且A与B 相互独立，则P(AB)=`____`, $P(A\cup B)=$`____`
+
+
+
+- 在5道试题中有3道代数题和2道几何体题，每次从中随机抽出1道题，抽出的题不再放回，求：
+  - 在第1次抽到代数题且第2次抽到几何题的概率
+  - 在第1次抽到代数题的条件下，第2次抽到几何题的概率（用公式完成）
+- 银行储蓄卡的密码由6位数字组成，某人在银行自助取款机上取钱时，忘记了密码的最后1位数字，求：任意按最后1 位数字，不超过2 次就按对的概率。
+- 有3 台车床加工同一型号的零件，第1台加工的次品率为6%，第2、3台加工的次品率为5%，加工出来的零件混放在一起，已知第1、2、3台车床加工的零件数分别占总数的25%、30%、45%
+  - 任取一个零件，计算它是次品的概率
+  - 如果取到的零件是次品，计算它是第i（i=1，2，3）台车床加工的概率（用公式完成）
+
+
+
+- 随机变量$X$ 的分布列为$P(X=0)=0.2,P(X=1)=a,P(X=2)=b,若E(X)=1，求a,b$
+- 甲乙两位选手进行象棋比赛，如果每局比赛甲获胜的概率为0.6，乙获胜的概率为0.4，那么采用3局2胜制还是采用5局3胜制对甲更有利？
+- 将一枚质地均匀的硬币连续抛掷4次，$X$ 表示“正面朝上” 出现的次数。求$E(X),D(X)$
+- 一批零件共有30 个，其中有3 个不合格，随机抽取10 个零件进行检测，求至少有1 件不合格的概率。
+- 抛掷一枚骰子，当出现5 点或6 点时，就说这次试验成功，求在30 次试验中成功次数$X$ 的均值和方差
+
+
+
+- 某市高二年级男生的身高$X$(单位:cm)近似服从正态分布$N(170,5^2)$,随机选择一名本市高二年级的男生，求下列事件的概率：(1)$\{165<X\le175\}$    (2)$\{x\le 165\}$
+- 袋装食盐标准质量为400g，规定误差的绝对值不超过4g就认为合格，假设误差服从正态分布，随机抽取100袋食盐，误差的样本均值为0，样本方差为4.请你估计这批袋装食盐的合格率。
+- 甲乙丙三人互相做传球训练，第1 次由甲将球传出，每次传球时，传球者都等可能地将球传给另外两个人中的任何一人，求n 次传球后球在甲手中的概率。
+- 
+
+
+
+---
+
+【鸽巢问题】“总有”、“至少”：（6年级下）
+
+- 11只鸽子飞进了4个鸽笼，总有一个鸽笼至少飞进了3只鸽子
+- 盒子里有同样大小的红球和篮球各4个，要想摸出的球一定有2个同色的，至少要摸出几个球
+
