--- a/MyDocs/edu/数学_数形-总结/5数形-2-图形-平面-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/5数形-2-图形-平面-0-概念.md
@@ -84,3 +84,8 @@
 推论：
 
 过两个定点的两条动直线，若其斜率之积为负数常数，则两条直线的交点轨迹为椭圆；若其斜率之积为正数常数，则两条直线的交点轨迹为双曲线。
+
+
+
+在曲线$y=f(x)$ 上任取一点$P(x,f(x))$，如果当点P 沿着曲线无限接近于点$P_0(x_0,f(x_0))$ 时，割线$P_0P$ 无限趋近于一个确定的位置，这个确定位置的直线$P_0T$ 称为曲线在$P_0$ 处的**切线**
+
