--- a/MyDocs/edu/数学_数形-总结/0数-1-算数-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/0数-1-算数-0-概念.md
@@ -14,19 +14,16 @@
 
 ### 类型：
 
-$$
-实数 
-\begin{cases}
-有理数 \begin{cases} 整数\\分数 \end{cases}
-\\ 无理数
-\end{cases}
-$$
+#### 数字类型：
 
-- **有理数**为有限小数和无限循环小数；**无理数**为无限不循环小数（7年级上）
+- **自然数**：表示物体个数的都是自然数，一个都没有，用0 表示。（4年级上）
 
-  > 无理数 e = 2.71828 （必修1）
+  - 最小的自然数是0，没有最大的自然数，自然数的个数是无限的（4年级上）
 
-- 有理数和无理数统称**实数**。（7年级上）
+- **小数**：整数部分、小数点、小数部分（4年级下）
+
+  - 性质：末尾添上“0” 或去掉“0”，大小不变（4年级下）
+  - 循环小数、循环节： $6.9\overset{•}{2}5\overset{•}{8}$，有限小数、无限小数（5年级上）
 
 - **分数**：
 
@@ -42,18 +39,21 @@ $$
 
     由整数和真分数合成的数叫作**带分数**：如$2\frac{1}{2}$（5年级下）
 
-- **自然数**：表示物体个数的都是自然数，一个都没有，用0 表示。（4年级上）
+- **有理数**为有限小数和无限循环小数；**无理数**为无限不循环小数（7年级上）
 
-  - 最小的自然数是0，没有最大的自然数，自然数的个数是无限的（4年级上）
+  > 无理数 e = 2.71828 （必修1）
 
-- **小数**：整数部分、小数点、小数部分（4年级下）
+- 有理数和无理数统称**实数**。（7年级上）
 
-  - 性质：末尾添上“0” 或去掉“0”，大小不变（4年级下）
-  - 循环小数、循环节： $6.9\overset{•}{2}5\overset{•}{8}$，有限小数、无限小数（5年级上）
+$$
+实数 
+\begin{cases}
+有理数 \begin{cases} 整数\\分数 \end{cases}
+\\ 无理数
+\end{cases}
+$$
 
-### 不同维度
-
-#### 正负数：
+#### 正负：
 
 把一种意义的量规定为正，用大于零的数表示，叫做**正数**；正数前面可以放上**正号**“+”来表示（常省略不写）。把另一种与之意义相反的量规定为负，用大于零的数前面放上**负号**“-”来表示，叫做负数。（7年级上）
 
@@ -63,11 +63,11 @@ $$
 
 如果两个数只有（正负）符号不同，那么我们称其中一个数为另一个数的相反数，也称这两个数互为**相反数**。（0的相反数是0）（7年级上）
 
-#### 绝对值（7年级上）
+##### 绝对值（7年级上）
 
-> 绝对值定义是数轴，应该和图形结合，但是明显是数的概念，不好归类
+> 绝对值定义是数轴，应该和图形结合，但是明显是数的概念，所以放这讲
 
-把一个数在数轴上对应的点到原点的距离叫做这个数的绝对值。
+把一个数在数轴上对应的点到原点的距离叫做这个**数的绝对值**。
 
 一个数a 的绝对值表示为|a| 。
 
@@ -88,7 +88,7 @@ $$
   - 十分之一、百分之一、千分之一...... 分别写作0.1,0.01,0.001 ......（4年级下）
 - **数位**：个位、十位、百位（2年级下）
   - 在用数字表示数的时候，这些计数单位要按照一定的顺序排列起来，它们所占的位置叫做数位（4年级上）
-  - 这是个位，计数单位是一，表示几个一；这是“十分位”，表示几个十分之一。（4年级下）
+  - 个位，计数单位是一，表示几个一；“十分位”，表示几个十分之一。（4年级下）
   - 千位，万位，千分位，百分位（7年级上）
 - **数级**：按照我国的计数习惯，从右边起，每四个数位是一级（个级、万级、亿级）（4年级上）
   - 为了读写方便，常常把不是整万或整亿的数改写成用“万”或“亿”作单位的数。（4年级下）
@@ -101,13 +101,13 @@ $$
 **竖式计算**
 
 - **进位**标识（数的边上写小1）、**退位**标记（数的上面标点）（2年级上）
-
 - 竖式除法（2年级下）
 - 小数点对齐（3年级下）
+- 短除法（5年级下）
 
 **口算**（3年级上）
 
-#### 种类
+#### 运算类型
 
 - **比较**运算（1年级上）
 
@@ -120,7 +120,7 @@ $$
   - **加法**
 
     - 加数、加号、和（1年级上）
-    - 把两个数合并成一个数的运算，叫作加法。相加的两个数叫作加数，加得的数叫作和（4年级下）
+    - 把两个数合并成一个数的运算，叫作加法。相加的两个数叫作**加数**，加得的数叫作**和**（4年级下）
     
     - **同号**两数相加，取与加数相同的符号，并把绝对值相加。  **异号**两数相加，取绝对值较大的加数的符号，并用较大的绝对值减去较小的绝对值。互为相反数的两个数相加得0，一个数同0 相加，仍得这个数。（法则，7年级上）
     
@@ -177,6 +177,7 @@ $$
 
           > 幂的底数是分数或负数时，底数应该添上括号，如$(-5)^2$
           >
+          > 把一个数表示成 a($1\leq a<10$) 与10 的幂相乘的形式，叫做**科学记数法**
           
       - 一个数可以看做这个数本身的一次方，指数1 通常省略不写，二次方也叫做**平方**，三次方也叫做**立方**
       
@@ -186,7 +187,7 @@ $$
           >
           > $1.1^2 = 1.21 ; 1.1^3 = 1.331$
           
-      - 分数指数（必修1）
+      - **分数指数**（必修1）
       
           $\sqrt{S} 也可以表示为S^{\frac{1}{2}}$，即以分数为指数
           
@@ -199,7 +200,7 @@ $$
           
           0 的正分数指数幂等于0，0 的负分数指数幂没有意义
           
-      - 实数指数：无理数指数幂$a^\alpha(a>0,\alpha 为无理数)$ 是一个确定的实数。所以指数的范围也拓展到了实数（必修1）
+      - **实数指数**：无理数指数幂$a^\alpha(a>0,\alpha 为无理数)$ 是一个确定的实数。所以指数的范围也拓展到了实数（必修1）
       
       - 对数（必修1）
       
@@ -303,6 +304,10 @@ $$
 - 比较运算
 
   比较两个数的大小，如果位数不同，那么位数多的数就大。如果位数相同，从最高位比起，最高位上的数大的那个数就大；最高位上的数相等，就比较下一个数位上的数…… 直到比出数的大小。（2年级下）
+
+- 乘法运算
+
+  正整数1 到n 的连乘积，即$1\times 2\times 3\times...\times(n-1) \times n$，叫做n 的**阶乘**，用$n!$ 来表示。规定$0!=1$（选3）
 
 - 除法运算
 
@@ -455,8 +460,4 @@ $$
   也叫做**百分率**或者**百分比**
 
   增加、减少百分之多少（6年级上）
-
-### 记数方法
-
-把一个数表示成 a($1\leq a<10$) 与10 的幂相乘的形式，叫做**科学记数法**
 
