--- a/MyDocs/edu/数学_数形-总结/0数-2-代数-0-基本-0-概念.md
+++ b/MyDocs/edu/数学_数形-总结/0数-2-代数-0-基本-0-概念.md
@@ -17,7 +17,7 @@ a& \text{(a} \geq \text{0)}
 
 已知`a + b = 24 ; a = b + b + b` 此时把`a` 换成`b + b + b` 叫作**等量代换** （6年级下）
 
-#### 类型：
+### 类型：
 
 $$
 代数式 
@@ -56,10 +56,16 @@ $$
     两个整式相除，且除式中含有字母  
 
     > 分式中字母的取值不能使分母为零，当分母的值为零时，分式就没有意义
+    
+- 二次根式（8年级下）
 
-#### 类型与运算（7年级下）
+    像$\sqrt{a^2+4},\sqrt{5}$ 这样表示算术平方根的代数式叫做**二次根式**。根据算术平方根的意义，二次根式根号内字母的取值范围必须满足被开方数大于或等于零。
 
-##### 整式和运算
+    根号内不含分母，不含开得尽方的因数或因式，这样的二次根式就说它是**最简二次根式**，二次根式化简的结果应为最简二次根式。二次根式运算的结果，如果能够化简，应把它化简为最简二次根式。
+
+### 类型与运算（7年级下）
+
+#### 整式和运算
 
 - 加减运算
 
@@ -78,9 +84,7 @@ $$
     > 这几个都可以结合图形证明
 
     - 单项式与单项式相乘，把它们的系数、同底数幂分别相乘，其余字母连同它的指数不变，作为积的**因式**
-
     - 单项式与多项式相乘，就是用单项式去乘多项式的每一项，再把所需的积相加（分配率？）
-
     - 多项式与多项式相乘，先用一个多项式的每一项乘另一个多项式的每一项，再把所得的积相加。如果有同类项，需要把同类项合并 $(a+n)(b+m)=ab+am+nb+nm$ 
 
     **乘法公式**
@@ -92,9 +96,21 @@ $$
         - $(a-b)^2=a^2-2ab+b^2$，两数差的平方，等于这两数的平方和，减去这两数积的2倍  
         
         > $a^2\pm2ab+b^2$ 叫做**完全平方式**
-
+    
     > 杨辉三角，立方：$(a+b)^3=(a+b)(a^2+2ab+b^2)=a^3+3a^2b+3ab^2+b^3$
 
+    ##### 二项式定理（选3）
+
+    $(a+b)^n=C^0_na^n+C^1_na^{n-1}b^1+...+C^k_na^{n-k}b^k+...+C^n_nb^n$，右边的多项式叫做$(a+b)^n$ 的**二项展开式**，其中各项的系数$C^k_n(k=0,1,2...n)$ 叫做**二项式系数**，$C^k_na^{n-k}b^k$ 叫做二项展开式的通项，可用$T_{k+1}$ 表示
+
+    > 实际运算的时候，还要结合a、b 的常数项，来得出每一项的系数。
+
+    性质：
+
+    - 对称
+    - 增减性与最大值
+    - 系数和：$C^0_n+C^1_n+...+C^n_n=2^n$
+    
 - 除法运算（法则，7年级下）
 
     - 单项式相除，把系数、同底数幂分别相除，作为商的因式，对于只在被除式里含有的字母，则连同它的指数作为商的一个因式。
@@ -103,7 +119,7 @@ $$
     
         > 这个不就是分式了？放在整式里？
 
-##### 分式和运算（7年级下）
+#### 分式和运算（7年级下）
 
 - $\frac{A}{B}=\frac{A\times M}{B\times M},\frac{A}{B}=\frac{A\div M}{B\div M}$ 其中M是不等于零的整式
 
@@ -117,24 +133,7 @@ $$
 
 - 分式乘分式，用分子的积做积的分子，分母的积做积的分母；分式除以分式，把除式的分子、分母颠倒位置后，与被除式相乘。$\frac{a}{b}·\frac{c}{d}=\frac{ac}{bd}; \frac{a}{b}\div\frac{c}{d}=\frac{a}{b}·\frac{d}{c}=\frac{ad}{bc}$
 
-#### 因式分解（7年级下）：
-
-把一个多项式化成几个整式的积的形式，叫做**因式分解**，有时把这一过程叫**分解因式**
-
-- **提取公因式法**：一个多项式中每一项都含有的相同的因式，叫做这个多项式各项的**公因式**，如果一个多项式的各项含有公因式，可把该公因式提取出来进行因式分解
-- （乘法）**公式法**：反向一下即可，如 $a^2-b^2 = (a+b)(a-b)$
-
-整式的化简应遵循先乘方、再乘除、最后算加减的顺序，能运用乘法公式的则运用公式
-
-
-
-### 二次根式(8年级下)
-
-像$\sqrt{a^2+4},\sqrt{5}$ 这样表示算术平方根的代数式叫做**二次根式**。根据算术平方根的意义，二次根式根号内字母的取值范围必须满足被开方数大于或等于零。
-
-根号内不含分母，不含开得尽方的因数或因式，这样的二次根式就说它是**最简二次根式**，二次根式化简的结果应为最简二次根式。二次根式运算的结果，如果能够化简，应把它化简为最简二次根式。
-
-#### 运算
+#### 二次根式与运算（8年级下）：
 
 数与二次根式相乘时，乘号可以省略。例如，$2\sqrt{2}$ 表示$2 \times \sqrt{2}$
 
@@ -152,6 +151,17 @@ $$
 
 
 
+### 因式分解（7年级下）：
+
+把一个多项式化成几个整式的积的形式，叫做**因式分解**，有时把这一过程叫**分解因式**
+
+- **提取公因式法**：一个多项式中每一项都含有的相同的因式，叫做这个多项式各项的**公因式**，如果一个多项式的各项含有公因式，可把该公因式提取出来进行因式分解
+- （乘法）**公式法**：反向一下即可，如 $a^2-b^2 = (a+b)(a-b)$
+
+整式的化简应遵循先乘方、再乘除、最后算加减的顺序，能运用乘法公式的则运用公式
+
+
+
 ### 等式不等式
 
 类似的反应数量关系的问题，就是相等与不等。**相等用等式表示，不等用不等式表示**（必修1）
@@ -159,4 +169,8 @@ $$
 等号没有方向性，而不等号具有方向性（必修1）
 
 
+
+### 化归思想（必修1）
+
+如设$\alpha = \theta + \varphi; \beta = \theta - \varphi$ 那么$\theta = \frac{\alpha+\beta}{2};\varphi=\frac{\alpha-\beta}{2}$
 
